--- a/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -63,7 +63,6 @@ COM_BIXPRINTSHOP_ADMIN_ALS_GEBRUIKER_SPR="Administrator werkt als gebruiker %s."
 BIX_DATE="d-m-Y H:i:s"
 BIX_MM="mm"
 COM_BIXPRINTSHOP_MAIL_SENT_SPR="Email naar %s succesvol verzonden"
-BIX_AANTAL_PAGS="Aantal pagina's"
 ;params (ook in .sys ini)
 COM_BIXPRINTSHOP_PARAMS_TITLE_PRODUCTEN="Categorieoverzicht"
 COM_BIXPRINTSHOP_PARAMS_TITLE_PRODUCT="Productdetails"
@@ -193,8 +192,8 @@ COM_BIXPRINTSHOP_CONFIG_GUESTCHECKOUT="Checkout als gast"
 COM_BIXPRINTSHOP_CONFIG_GUESTCHECKOUT_DESC="Sta gebruiker toe naar checkout te gaan zonder in te loggen."
 
 ;gegevens
-COM_BIXPRINTSHOP_LEGEND_CONFIG_GEGEVENS="Gegevens"
 COM_BIXPRINTSHOP_CONFIG_GEGEVENS_BEDRIJFSNAAM="Bedrijfsnaam"
+COM_BIXPRINTSHOP_LEGEND_CONFIG_GEGEVENS="Gegevens"
 COM_BIXPRINTSHOP_CONFIG_GEGEVENS_ADRES="Adres"
 COM_BIXPRINTSHOP_CONFIG_GEGEVENS_POSTCODE="Postcode"
 COM_BIXPRINTSHOP_CONFIG_GEGEVENS_PLAATS="Plaats"
@@ -422,9 +421,6 @@ COM_BIXPRINTSHOP_LEGEND_PRIJS ="Prijzen"
 BIX_DEFAULT_PRIJS="Standaardprijs"
 COM_BIXPRINTSHOP_PRIJS_PRIJSOPTIES="Prijsopties"
 COM_BIXPRINTSHOP_PRIJS_PRIJSDATA="Data"
-BIX_SELECT_ATTRIB_SPR="-selecteer %s-"
-BIX_SELECT_PRODUCT="-selecteer product-"
-BIX_SELECT_DRUKKER="-selecteer drukker-"
 ;***
 ;* productopties
 ;*
@@ -443,6 +439,7 @@ COM_BIXPRINTSHOP_ATTRIBS_ATTRIBDESCR_DESC="Helptekst bij invullen."
 COM_BIXPRINTSHOP_ATTRIBS_ATTRIBTYPE="Type optie"
 COM_BIXPRINTSHOP_ATTRIBS_ATTRIBTYPE_DESC="Selecteer type optie"
 COM_BIXPRINTSHOP_ATTRIBS_ATTRIBTYPE_ALERT="Als het veldtype veranderd wordt, gaan de parameters verloren! Sla de productoptie op om de nieuwe parameters te laden."
+COM_BIXPRINTSHOP_ATTRIBTYPE_UITVOERTERMIJN="Levertijd"
 ATTRIBCALCON_AFWERKING="Afwerking"
 ATTRIBCALCON_BESTELLING="Bestelling"
 ATTRIBCALCON_CART="Winkelwagen"
@@ -737,6 +734,8 @@ COM_BIXPRINTSHOP_ATTRIBTYPES_FORMAT_HEIGHT="Hoogte"
 COM_BIXPRINTSHOP_ATTRIBTYPES_FORMAT_HEIGHT_DESC=""
 COM_BIXPRINTSHOP_ATTRIBTYPES_FORMAT_WIDTH="Breedte"
 COM_BIXPRINTSHOP_ATTRIBTYPES_FORMAT_WIDTH_DESC=""
+COM_BIXPRINTSHOP_ATTRIBTYPE_UITVOERTERMIJN_DAGENMIN="Min. levertermijn"
+COM_BIXPRINTSHOP_ATTRIBTYPE_UITVOERTERMIJN_DAGENMAX="Max. levertermijn"
 COM_BIXPRINTSHOP_NUMMERING_BEGINAANTAL_LBL="Beginaantal"
 COM_BIXPRINTSHOP_NUMMERING_BEGINAANTAL="Beginaantal"
 COM_BIXPRINTSHOP_PARAMS_MULTIPLE="Meerdere"
@@ -783,13 +782,13 @@ COM_BIXPRINTSHOP_BESTELLING_BETAALID="Betaal ID"
 COM_BIXPRINTSHOP_BESTELLING_BETALINGDATUM="Betaaldatum"
 COM_BIXPRINTSHOP_BESTELLING_BETALINGDATUM_DESC=""
 COM_BIXPRINTSHOP_BESTELLING_ORDERSNETTO="Order netto"
-COM_BIXPRINTSHOP_BESTELLING_ORDERSBTW="Orders btw"
+COM_BIXPRINTSHOP_BESTELLING_ORDERSBTW="Orders BTW"
 COM_BIXPRINTSHOP_BESTELLING_ADMINISTRATIEINKOOP="Administratie inkoop"
 COM_BIXPRINTSHOP_BESTELLING_ADMINISTRATIEPRIJS="Administratiekosten"
-COM_BIXPRINTSHOP_BESTELLING_ADMINISTRATIEBTW="Administratie btw"
+COM_BIXPRINTSHOP_BESTELLING_ADMINISTRATIEBTW="Administratie BTW"
 COM_BIXPRINTSHOP_BESTELLING_BESTELNETTO="Bestelling netto"
 COM_BIXPRINTSHOP_BESTELLING_BESTELKORTING="Korting"
-COM_BIXPRINTSHOP_BESTELLING_BESTELBTW="Bestelling btw"
+COM_BIXPRINTSHOP_BESTELLING_BESTELBTW="Bestelling BTW"
 COM_BIXPRINTSHOP_BESTELLING_BESTELBRUTO="Bestelling bruto"
 COM_BIXPRINTSHOP_BESTELLING_BESTELTYPE="Bestelling type"
 BESTEL_INTERN="Intern"
@@ -850,7 +849,7 @@ COM_BIXPRINTSHOP_DRUKVEL_MACHINEID="Drukvel machine ID"
 BIX_DEFAULT_DRUKVEL="Standaard drukvel"
 COM_BIXPRINTSHOP_DRUKVEL_IDENTIFIER="Drukvel Identifier"
 COM_BIXPRINTSHOP_DRUKVEL_IDENTIFIER_DESC=""
-COM_BIXPRINTSHOP_DRUKVEL_DRUKVELNAAM="Drukvenaam"
+COM_BIXPRINTSHOP_DRUKVEL_DRUKVELNAAM="Drukvelnaam"
 COM_BIXPRINTSHOP_DRUKVEL_DRUKVELNAAM_DESC=""
 COM_BIXPRINTSHOP_DRUKVEL_MACHINETYPE="Drukvel machinetype"
 COM_BIXPRINTSHOP_DRUKVEL_MACHINETYPE_DESC=""
@@ -881,10 +880,10 @@ COM_BIXPRINTSHOP_FACTUUR_GROEP3="Factuurgroep 3"
 COM_BIXPRINTSHOP_FACTUUR_GROEP4="Factuurgroep 4"
 COM_BIXPRINTSHOP_FACTUUR_GROEP5="Factuurgroep 5"
 COM_BIXPRINTSHOP_FACTUUR_BESTELNETTO="Bestelling netto"
-COM_BIXPRINTSHOP_FACTUUR_BESTELBTW="Bestelling btw"
+COM_BIXPRINTSHOP_FACTUUR_BESTELBTW="Bestelling BTW"
 COM_BIXPRINTSHOP_FACTUUR_BESTELBRUTO="Bestelling bruto"
 COM_BIXPRINTSHOP_ORDER_TOTAALNETTO="Order totaal netto"
-COM_BIXPRINTSHOP_ORDER_TOTAALBTW="Order totaal btw"
+COM_BIXPRINTSHOP_ORDER_TOTAALBTW="Order totaal BTW"
 COM_BIXPRINTSHOP_ORDER_TOTAALBRUTO="Order totaal bruto"
 COM_BIXPRINTSHOP_LAND_ISOCODE_DESC=""
 COM_BIXPRINTSHOP_LAND_NAAM_DESC="Landnaam"
@@ -911,7 +910,7 @@ COM_BIXPRINTSHOP_PRODUCTEN_USERID="Gebruikers ID"
 COM_BIXPRINTSHOP_ORDER_DRUKKERIJ="Drukkerij"
 COM_BIXPRINTSHOP_ORDER_NO_DRUKKERIJ="Geen drukkerij geselecteerd"
 COM_BIXPRINTSHOP_ORDER_ORDERCOMMENT="Opmerking"
-COM_BIXPRINTSHOP_ORDER_ORDERDATUM="Orderdatum"
+COM_BIXPRINTSHOP_ORDER_ORDERDATUM="Leverdatum"
 COM_BIXPRINTSHOP_ORDER_LEVERDATUM="Leverdatum"
 COM_BIXPRINTSHOP_ORDER_LEVERDATUM_DESC="De geplande leverdatum voor deze order"
 COM_BIXPRINTSHOP_ORDER_PLANOINKOOP="Plano inkoop"
@@ -923,9 +922,9 @@ COM_BIXPRINTSHOP_ORDER_PLANOPRIJS="Plano prijs"
 COM_BIXPRINTSHOP_ORDER_AFWERKPRIJS="Afwerkprijs"
 COM_BIXPRINTSHOP_ORDER_ORDERPRIJS="Order prijs"
 COM_BIXPRINTSHOP_ORDER_CARTPRIJS="Winkelwagenprijs"
-COM_BIXPRINTSHOP_ORDER_ORDERNETTO="Orderbedrag netto"
-COM_BIXPRINTSHOP_ORDER_ORDERBTW="Order btw"
-COM_BIXPRINTSHOP_ORDER_ORDERBRUTO="Orderbedrag bruto"
+COM_BIXPRINTSHOP_ORDER_ORDERNETTO="Order netto"
+COM_BIXPRINTSHOP_ORDER_ORDERBTW="Order BTW"
+COM_BIXPRINTSHOP_ORDER_ORDERBRUTO="Order bruto"
 COM_BIXPRINTSHOP_ORDER_ORDERTYPE="Ordertype"
 
 COM_BIXPRINTSHOP_ORDER_PLANOSHORT_OPLAGE_SPR="%s stuks"
@@ -1105,6 +1104,9 @@ COM_BIXPRINTSHOP_MAILHISTORIE_DRUKKERIJ="Drukkerij"
 COM_BIXPRINTSHOP_MAILHISTORIE_ADMIN="Admin"
 COM_BIXPRINTSHOP_MAILHISTORIE_NOMAIL="Geen mailberichten"
 
+;Prijzen
+BIX_SELECT_PRODUCT="Selecteer product"
+BIX_SELECT_DRUKKER="Selecteer drukkerij"
 
 
 
