--- a/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -61,7 +61,6 @@ BIX_ORIGINAL="Originele grootte"
 COM_BIXPRINTSHOP_BEWERK_PROFIEL="Bewerk Klant"
 COM_BIXPRINTSHOP_ADMIN_ALS_GEBRUIKER_SPR="Administrator werkt als gebruiker %s."
 BIX_DATE="d-m-Y H:i:s"
-BIX_MM="mm"
 COM_BIXPRINTSHOP_MAIL_SENT_SPR="Email naar %s succesvol verzonden"
 ;params (ook in .sys ini)
 COM_BIXPRINTSHOP_PARAMS_TITLE_PRODUCTEN="Categorieoverzicht"
@@ -192,7 +191,6 @@ COM_BIXPRINTSHOP_CONFIG_GUESTCHECKOUT="Checkout als gast"
 COM_BIXPRINTSHOP_CONFIG_GUESTCHECKOUT_DESC="Sta gebruiker toe naar checkout te gaan zonder in te loggen."
 
 ;gegevens
-COM_BIXPRINTSHOP_CONFIG_GEGEVENS_BEDRIJFSNAAM="Bedrijfsnaam"
 COM_BIXPRINTSHOP_LEGEND_CONFIG_GEGEVENS="Gegevens"
 COM_BIXPRINTSHOP_CONFIG_GEGEVENS_ADRES="Adres"
 COM_BIXPRINTSHOP_CONFIG_GEGEVENS_POSTCODE="Postcode"
@@ -421,6 +419,9 @@ COM_BIXPRINTSHOP_LEGEND_PRIJS ="Prijzen"
 BIX_DEFAULT_PRIJS="Standaardprijs"
 COM_BIXPRINTSHOP_PRIJS_PRIJSOPTIES="Prijsopties"
 COM_BIXPRINTSHOP_PRIJS_PRIJSDATA="Data"
+BIX_SELECT_ATTRIB_SPR="-selecteer %s-"
+BIX_SELECT_PRODUCT="-selecteer product-"
+BIX_SELECT_DRUKKER="-selecteer drukker-"
 ;***
 ;* productopties
 ;*
@@ -439,7 +440,6 @@ COM_BIXPRINTSHOP_ATTRIBS_ATTRIBDESCR_DESC="Helptekst bij invullen."
 COM_BIXPRINTSHOP_ATTRIBS_ATTRIBTYPE="Type optie"
 COM_BIXPRINTSHOP_ATTRIBS_ATTRIBTYPE_DESC="Selecteer type optie"
 COM_BIXPRINTSHOP_ATTRIBS_ATTRIBTYPE_ALERT="Als het veldtype veranderd wordt, gaan de parameters verloren! Sla de productoptie op om de nieuwe parameters te laden."
-COM_BIXPRINTSHOP_ATTRIBTYPE_UITVOERTERMIJN="Levertijd"
 ATTRIBCALCON_AFWERKING="Afwerking"
 ATTRIBCALCON_BESTELLING="Bestelling"
 ATTRIBCALCON_CART="Winkelwagen"
@@ -512,8 +512,6 @@ COM_BIXPRINTSHOP_OPTION_OPSTARTPRIJS="Opstartprijs"
 COM_BIXPRINTSHOP_OPTION_PRIJSPERSTUK="Kosten per stuk"
 COM_BIXPRINTSHOP_OPTION_MOVE="Versleep om volgorde aan te passen."
 COM_BIXPRINTSHOP_OPTION_DELETE="Klik om te verwijderen."
-COM_BIXPRINTSHOP_OPTION_PRICEPERCENTAGE="Percentage"
-COM_BIXPRINTSHOP_OPTION_PRICEPERCENTAGE_DESC="Geef percentage korting/opslag in, berekend tov basisprijs."
 
 ;params
 COM_BIXPRINTSHOP_PARAMS_ARTICLEID="Helptekst ID"
@@ -604,10 +602,6 @@ COM_BIXPRINTSHOP_PRODUCT_ATTRIBS_INPRODUCT="Gekoppelde productopties"
 COM_BIXPRINTSHOP_PRODUCTEN_PAGETITLE="Paginatitel"
 COM_BIXPRINTSHOP_PRODUCTEN_PAGETITLE_DESC="Geef eventueel een alternatieve paginatitel op. Standaard wordt de productnaam gebruikt."
 
-COM_BIXPRINTSHOP_PRODUCTEN_POS_BOTTOM="Onder formulier"
-COM_BIXPRINTSHOP_PRODUCTEN_POS_SIDETOP="Naast form - Boven"
-COM_BIXPRINTSHOP_PRODUCTEN_POS_SIDEBOTTOM="Naast form - Onder"
-
 ;drukvellen
 COM_BIXPRINTSHOP_AANTAL_VAN_TOT_SPRF="Van %s tot %s stuks"
 MACHINETYPE_DIGITAAL="Digitaal"
@@ -628,8 +622,6 @@ BIX_UPLOAD_PROGRESS="{percent}% van {total_size}"
 BIX_UPLOAD_WAITING="Wachten"
 BIX_DOWNLOAD="Download"
 BIX_DELETE="Verwijderen"
-COM_BIXPRINTSHOP_MACHINE_DELETEDRUKVEL="Drukvel verwijderen"
-COM_BIXPRINTSHOP_DRUKVEL_CONFIRM_DELETE="Wilt u dit drukvel verwijderen bij deze machine?"
 COM_BIXPRINTSHOP_ERROR_DELETING_DRUKVEL="Drukvel verwijderen is mislukt"
 COM_BIXPRINTSHOP_MACHINE_DELETED="Machine verwijderd"
 COM_BIXPRINTSHOP_SAVE_ORDERING_SUCCESS="Volgorde gewijzigd"
@@ -734,8 +726,6 @@ COM_BIXPRINTSHOP_ATTRIBTYPES_FORMAT_HEIGHT="Hoogte"
 COM_BIXPRINTSHOP_ATTRIBTYPES_FORMAT_HEIGHT_DESC=""
 COM_BIXPRINTSHOP_ATTRIBTYPES_FORMAT_WIDTH="Breedte"
 COM_BIXPRINTSHOP_ATTRIBTYPES_FORMAT_WIDTH_DESC=""
-COM_BIXPRINTSHOP_ATTRIBTYPE_UITVOERTERMIJN_DAGENMIN="Min. levertermijn"
-COM_BIXPRINTSHOP_ATTRIBTYPE_UITVOERTERMIJN_DAGENMAX="Max. levertermijn"
 COM_BIXPRINTSHOP_NUMMERING_BEGINAANTAL_LBL="Beginaantal"
 COM_BIXPRINTSHOP_NUMMERING_BEGINAANTAL="Beginaantal"
 COM_BIXPRINTSHOP_PARAMS_MULTIPLE="Meerdere"
@@ -782,13 +772,13 @@ COM_BIXPRINTSHOP_BESTELLING_BETAALID="Betaal ID"
 COM_BIXPRINTSHOP_BESTELLING_BETALINGDATUM="Betaaldatum"
 COM_BIXPRINTSHOP_BESTELLING_BETALINGDATUM_DESC=""
 COM_BIXPRINTSHOP_BESTELLING_ORDERSNETTO="Order netto"
-COM_BIXPRINTSHOP_BESTELLING_ORDERSBTW="Orders BTW"
+COM_BIXPRINTSHOP_BESTELLING_ORDERSBTW="Orders btw"
 COM_BIXPRINTSHOP_BESTELLING_ADMINISTRATIEINKOOP="Administratie inkoop"
 COM_BIXPRINTSHOP_BESTELLING_ADMINISTRATIEPRIJS="Administratiekosten"
-COM_BIXPRINTSHOP_BESTELLING_ADMINISTRATIEBTW="Administratie BTW"
+COM_BIXPRINTSHOP_BESTELLING_ADMINISTRATIEBTW="Administratie btw"
 COM_BIXPRINTSHOP_BESTELLING_BESTELNETTO="Bestelling netto"
 COM_BIXPRINTSHOP_BESTELLING_BESTELKORTING="Korting"
-COM_BIXPRINTSHOP_BESTELLING_BESTELBTW="Bestelling BTW"
+COM_BIXPRINTSHOP_BESTELLING_BESTELBTW="Bestelling btw"
 COM_BIXPRINTSHOP_BESTELLING_BESTELBRUTO="Bestelling bruto"
 COM_BIXPRINTSHOP_BESTELLING_BESTELTYPE="Bestelling type"
 BESTEL_INTERN="Intern"
@@ -849,7 +839,7 @@ COM_BIXPRINTSHOP_DRUKVEL_MACHINEID="Drukvel machine ID"
 BIX_DEFAULT_DRUKVEL="Standaard drukvel"
 COM_BIXPRINTSHOP_DRUKVEL_IDENTIFIER="Drukvel Identifier"
 COM_BIXPRINTSHOP_DRUKVEL_IDENTIFIER_DESC=""
-COM_BIXPRINTSHOP_DRUKVEL_DRUKVELNAAM="Drukvelnaam"
+COM_BIXPRINTSHOP_DRUKVEL_DRUKVELNAAM="Drukvenaam"
 COM_BIXPRINTSHOP_DRUKVEL_DRUKVELNAAM_DESC=""
 COM_BIXPRINTSHOP_DRUKVEL_MACHINETYPE="Drukvel machinetype"
 COM_BIXPRINTSHOP_DRUKVEL_MACHINETYPE_DESC=""
@@ -880,10 +870,10 @@ COM_BIXPRINTSHOP_FACTUUR_GROEP3="Factuurgroep 3"
 COM_BIXPRINTSHOP_FACTUUR_GROEP4="Factuurgroep 4"
 COM_BIXPRINTSHOP_FACTUUR_GROEP5="Factuurgroep 5"
 COM_BIXPRINTSHOP_FACTUUR_BESTELNETTO="Bestelling netto"
-COM_BIXPRINTSHOP_FACTUUR_BESTELBTW="Bestelling BTW"
+COM_BIXPRINTSHOP_FACTUUR_BESTELBTW="Bestelling btw"
 COM_BIXPRINTSHOP_FACTUUR_BESTELBRUTO="Bestelling bruto"
 COM_BIXPRINTSHOP_ORDER_TOTAALNETTO="Order totaal netto"
-COM_BIXPRINTSHOP_ORDER_TOTAALBTW="Order totaal BTW"
+COM_BIXPRINTSHOP_ORDER_TOTAALBTW="Order totaal btw"
 COM_BIXPRINTSHOP_ORDER_TOTAALBRUTO="Order totaal bruto"
 COM_BIXPRINTSHOP_LAND_ISOCODE_DESC=""
 COM_BIXPRINTSHOP_LAND_NAAM_DESC="Landnaam"
@@ -922,9 +912,9 @@ COM_BIXPRINTSHOP_ORDER_PLANOPRIJS="Plano prijs"
 COM_BIXPRINTSHOP_ORDER_AFWERKPRIJS="Afwerkprijs"
 COM_BIXPRINTSHOP_ORDER_ORDERPRIJS="Order prijs"
 COM_BIXPRINTSHOP_ORDER_CARTPRIJS="Winkelwagenprijs"
-COM_BIXPRINTSHOP_ORDER_ORDERNETTO="Order netto"
-COM_BIXPRINTSHOP_ORDER_ORDERBTW="Order BTW"
-COM_BIXPRINTSHOP_ORDER_ORDERBRUTO="Order bruto"
+COM_BIXPRINTSHOP_ORDER_ORDERNETTO="Orderbedrag netto"
+COM_BIXPRINTSHOP_ORDER_ORDERBTW="Order btw"
+COM_BIXPRINTSHOP_ORDER_ORDERBRUTO="Orderbedrag bruto"
 COM_BIXPRINTSHOP_ORDER_ORDERTYPE="Ordertype"
 
 COM_BIXPRINTSHOP_ORDER_PLANOSHORT_OPLAGE_SPR="%s stuks"
@@ -1104,13 +1094,18 @@ COM_BIXPRINTSHOP_MAILHISTORIE_DRUKKERIJ="Drukkerij"
 COM_BIXPRINTSHOP_MAILHISTORIE_ADMIN="Admin"
 COM_BIXPRINTSHOP_MAILHISTORIE_NOMAIL="Geen mailberichten"
 
-;Prijzen
-BIX_SELECT_PRODUCT="Selecteer product"
-BIX_SELECT_DRUKKER="Selecteer drukkerij"
-
-
-
-
-
-
+;vervoerders
+COM_BIXPRINTSHOP_TITLE_VERVOERDER="Vervoerder"
+COM_BIXPRINTSHOP_TITLE_VERVOERDERS="Vervoerders"
+COM_BIXPRINTSHOP_VERVOERDERS_VERVOERDERDATA="Vervoerder data"
+COM_BIXPRINTSHOP_VERVOERDERS_VERVOERDERNAAM="Vervoerdernaam"
+COM_BIXPRINTSHOP_VERVOERDERS_ALIAS=""
+COM_BIXPRINTSHOP_VERVOERDERS_VERVOERDERTELEFOON="Telefoon"
+COM_BIXPRINTSHOP_VERVOERDERS_VERVOERDEREMAIL="E-mail"
+COM_BIXPRINTSHOP_VERVOERDERS_VERVOERDERWEBSITE="Website"
+COM_BIXPRINTSHOP_VERVOERDERS_VERVOERDERSTRAAT="Straat"
+COM_BIXPRINTSHOP_VERVOERDERS_VERVOERDERHUISNUMMER="Huisnummer"
+COM_BIXPRINTSHOP_VERVOERDERS_VERVOERDERPOSTCODE="Postcode"
+COM_BIXPRINTSHOP_VERVOERDERS_VERVOERDERPLAATS="Plaats"
+COM_BIXPRINTSHOP_VERVOERDERS_VERVOERDER_LAND="Land"
 
