--- a/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -279,6 +279,7 @@ COM_BIXPRINTSHOP_CONFIG_PLGGROUP_DATA="Gegevens plugins"
 COM_BIXPRINTSHOP_CONFIG_PLGGROUP_ATTRIB ="Productoptie plugins"
 COM_BIXPRINTSHOP_CONFIG_PLGGROUP_ORDER="Orderbewerking plugins"
 COM_BIXPRINTSHOP_CONFIG_PLGGROUP_IMPORT="Import plugins"
+COM_BIXPRINTSHOP_CONFIG_PLGGROUP_VERVOER="Vervoer plugins"
 COM_BIXPRINTSHOP_PLG_ACTIVE="Activeer plugin"
 COM_BIXPRINTSHOP_PLG_DEBUG="Toon debug"
 COM_BIXPRINTSHOP_PLG_DEBUG_DESC="Toon debuginformatie bij deze plugin"
@@ -960,8 +961,8 @@ COM_BIXPRINTSHOP_PAPIERPRIJS_PRIJSEENHEID_DESC=""
 PRIJSEENHEID_1VEL="1 vel"
 PRIJSEENHEID_1000VEL="1000 vellen"
 PRIJSEENHEID_100KG="100 kilo"
-COM_BIXPRINTSHOP_CONFIG_PLUGIN_ACTIVE="Instellingen plugin actief"
-COM_BIXPRINTSHOP_CONFIG_PLUGIN_DEBUG="Instellingen plugin debug"
+COM_BIXPRINTSHOP_CONFIG_PLUGIN_ACTIVE="Plugin actief"
+COM_BIXPRINTSHOP_CONFIG_PLUGIN_DEBUG="Plugin debug"
 
 ; factuur
 COM_BIXPRINTSHOP_FACTUUR_TITLE_SPR="Factuur van %s"
@@ -1108,4 +1109,7 @@ COM_BIXPRINTSHOP_VERVOERDERS_VERVOERDERHUISNUMMER="Huisnummer"
 COM_BIXPRINTSHOP_VERVOERDERS_VERVOERDERPOSTCODE="Postcode"
 COM_BIXPRINTSHOP_VERVOERDERS_VERVOERDERPLAATS="Plaats"
 COM_BIXPRINTSHOP_VERVOERDERS_VERVOERDER_LAND="Land"
+COM_BIXPRINTSHOP_VERVOERDERS_TYPE="Type vervoerder"
+COM_BIXPRINTSHOP_VERVOERDERS_TYPE_DESC="Selecteer de juiste vervoeders-plugin"
+COM_BIXPRINTSHOP_VERVOERDERS_TYPE_ALERT="Opslaan voor nieuwe opties!"
 
