--- a/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -113,6 +113,7 @@ COM_BIXPRINTSHOP_TITLE_PRICES="Prijzen"
 COM_BIXPRINTSHOP_TITLE_COUPONS="Coupons"
 COM_BIXPRINTSHOP_TITLE_PRIJZEN="Prijzen"
 COM_BIXPRINTSHOP_TITLE_PRIJS="Prijs"
+COM_BIXPRINTSHOP_TITLE_DATA="Data"
 ;***
 ;* config
 ;*
@@ -1096,19 +1097,11 @@ COM_BIXPRINTSHOP_MAILHISTORIE_ADMIN="Admin"
 COM_BIXPRINTSHOP_MAILHISTORIE_NOMAIL="Geen mailberichten"
 
 ;vervoerders
-COM_BIXPRINTSHOP_TITLE_VERVOERDER="Vervoerder"
-COM_BIXPRINTSHOP_TITLE_VERVOERDERS="Vervoerders"
-COM_BIXPRINTSHOP_VERVOERDERS_VERVOERDERDATA="Vervoerder data"
-COM_BIXPRINTSHOP_VERVOERDERS_VERVOERDERNAAM="Vervoerdernaam"
-COM_BIXPRINTSHOP_VERVOERDERS_ALIAS=""
-COM_BIXPRINTSHOP_VERVOERDERS_VERVOERDERTELEFOON="Telefoon"
-COM_BIXPRINTSHOP_VERVOERDERS_VERVOERDEREMAIL="E-mail"
-COM_BIXPRINTSHOP_VERVOERDERS_VERVOERDERWEBSITE="Website"
-COM_BIXPRINTSHOP_VERVOERDERS_VERVOERDERSTRAAT="Straat"
-COM_BIXPRINTSHOP_VERVOERDERS_VERVOERDERHUISNUMMER="Huisnummer"
-COM_BIXPRINTSHOP_VERVOERDERS_VERVOERDERPOSTCODE="Postcode"
-COM_BIXPRINTSHOP_VERVOERDERS_VERVOERDERPLAATS="Plaats"
-COM_BIXPRINTSHOP_VERVOERDERS_VERVOERDER_LAND="Land"
+COM_BIXPRINTSHOP_TITLE_VERVOERDER="Transportmethode"
+COM_BIXPRINTSHOP_TITLE_VERVOERDERS="Transporten"
+COM_BIXPRINTSHOP_VERVOERDERS_VERVOERDERDATA="Vervoer data"
+COM_BIXPRINTSHOP_VERVOERDERS_VERVOERDERNAAM="Vervoer naam"
+COM_BIXPRINTSHOP_VERVOERDERS_VERVOERDESCR="Omschrijving"
 COM_BIXPRINTSHOP_VERVOERDERS_TYPE="Type vervoerder"
 COM_BIXPRINTSHOP_VERVOERDERS_TYPE_DESC="Selecteer de juiste vervoeders-plugin"
 COM_BIXPRINTSHOP_VERVOERDERS_TYPE_ALERT="Opslaan voor nieuwe opties!"
