vervoer en vervoerprijzen

--- a/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -502,6 +502,23 @@ COM_BIXPRINTSHOP_AFWERKPRIJS_PRIJSEENHEID="Prijseenheid"
 PRIJSEENHEID_1STUK="1 Stuk"
 PRIJSEENHEID_1000STUKS="1000 Stuks"
 COM_BIXPRINTSHOP_AFWERKPRIJS_AFWERKTYPE="Afwerktype"
+;vervoerprijzen
+COM_BIXPRINTSHOP_LEGEND_VERVOERPRIJZEN="Vervoerprijzen"
+COM_BIXPRINTSHOP_LEGEND_VERVOERPRIJS="Vervoerprijs"
+COM_BIXPRINTSHOP_VERVOERPRIJS_VERVOERDER="Vervoerder"
+BIX_AFWERKPRIJS_TOEVOEGEN="Vervoerprijs toevoegen"
+COM_BIXPRINTSHOP_VERVOERPRIJS_ID="Vervoerprijs ID"
+COM_BIXPRINTSHOP_VERVOERPRIJS_OPSTARTINKOOP="Opstart inkoop"
+COM_BIXPRINTSHOP_VERVOERPRIJS_OPSTARTPRIJS="Opstartprijs"
+COM_BIXPRINTSHOP_VERVOERPRIJS_DRUKVELLEN="Vervoerprijs drukvellen"
+COM_BIXPRINTSHOP_VERVOERPRIJS_PRIJS="Prijs"
+COM_BIXPRINTSHOP_VERVOERPRIJS_PRIJSEENHEID="Prijseenheid"
+PRIJSEENHEID_COLLI="Per pakket"
+PRIJSEENHEID_KILO="Per kilo"
+COM_BIXPRINTSHOP_AFWERKPRIJS_AFWERKTYPE="Afwerktype"
+COM_BIXPRINTSHOP_VERVOERPRIJS_GEWICHTVANAF="Gewicht vanaf"
+COM_BIXPRINTSHOP_VERVOERPRIJS_GEWICHTTOT="Gewicht tot"
+BIX_VERVOERPRIJS_TOEVOEGEN="Transportprijs toevoegen"
 ;options/values
 COM_BIXPRINTSHOP_OPTION_OPTIONVALUE="Optie standaardwaarde"
 COM_BIXPRINTSHOP_OPTION_VALUELABEL="Label"
@@ -606,6 +623,7 @@ COM_BIXPRINTSHOP_PRODUCTEN_PAGETITLE_DESC="Geef eventueel een alternatieve pagin
 
 ;drukvellen
 COM_BIXPRINTSHOP_AANTAL_VAN_TOT_SPRF="Van %s tot %s stuks"
+COM_BIXPRINTSHOP_GEWICHT_VAN_TOT_SPRF="Van %s tot %s kilo"
 MACHINETYPE_DIGITAAL="Digitaal"
 MACHINETYPE_OFFSET="Offset"
 COM_BIXPRINTSHOP_ADRES_TAV="t.a.v."
