--- a/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -513,6 +513,8 @@ COM_BIXPRINTSHOP_VERVOERPRIJS_OPSTARTPRIJS="Opstartprijs"
 COM_BIXPRINTSHOP_VERVOERPRIJS_DRUKVELLEN="Vervoerprijs drukvellen"
 COM_BIXPRINTSHOP_VERVOERPRIJS_PRIJS="Prijs"
 COM_BIXPRINTSHOP_VERVOERPRIJS_PRIJSEENHEID="Prijseenheid"
+COM_BIXPRINTSHOP_VERVOERPRIJS_PRIJSINKOOP="Inkoopprijs"
+COM_BIXPRINTSHOP_VERVOERPRIJS_OPSTARTINKOOP="Opstartkosten inkoop"
 PRIJSEENHEID_COLLI="Per pakket"
 PRIJSEENHEID_KILO="Per kilo"
 COM_BIXPRINTSHOP_AFWERKPRIJS_AFWERKTYPE="Afwerktype"
