--- a/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -242,6 +242,9 @@ COM_BIXPRINTSHOP_CONFIG_BETALEN_BETAALVARINKOOP="Variabele inkoopkosten"
 COM_BIXPRINTSHOP_CONFIG_BETALEN_BETAALVARINKOOP_DESC="Variabele kosten als inkoopkosten worden berekend bij de bestelling"
 COM_BIXPRINTSHOP_CONFIG_CALC_PRIJSTYPE="Type verkoopprijzen"
 COM_BIXPRINTSHOP_CONFIG_CALC_PRIJSTYPE_DESC="Geef aan hoe de verkoopprijzen tot stand komen."
+COM_BIXPRINTSHOP_LEGEND_CONFIG_PRODOPTIES="Instellingen productopties"
+COM_BIXPRINTSHOP_CONFIG_CALC_FEESTDAGEN="Feestdagen uitvoertermijn"
+COM_BIXPRINTSHOP_CONFIG_CALC_FEESTDAGEN_DESC="Geef aan welke feestdagen geblokkeerd moeten worden voor orderverwerking. LET OP! Invoeren kommagescheiden, YYYY-MM-DD, als volgt: 2013-12-25,2013-12-26,2013-03-15"
 PRIJSTYPE_MARGE="Gebruik margeberekening"
 PRIJSTYPE_VERKOOPDRUKKERIJ="Gebruik verkoopdrukkerijen"
 ;statussen
