--- a/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -61,7 +61,9 @@ BIX_ORIGINAL="Originele grootte"
 COM_BIXPRINTSHOP_BEWERK_PROFIEL="Bewerk Klant"
 COM_BIXPRINTSHOP_ADMIN_ALS_GEBRUIKER_SPR="Administrator werkt als gebruiker %s."
 BIX_DATE="d-m-Y H:i:s"
+BIX_MM="mm"
 COM_BIXPRINTSHOP_MAIL_SENT_SPR="Email naar %s succesvol verzonden"
+BIX_AANTAL_PAGS="Aantal pagina's"
 ;params (ook in .sys ini)
 COM_BIXPRINTSHOP_PARAMS_TITLE_PRODUCTEN="Categorieoverzicht"
 COM_BIXPRINTSHOP_PARAMS_TITLE_PRODUCT="Productdetails"
@@ -192,6 +194,7 @@ COM_BIXPRINTSHOP_CONFIG_GUESTCHECKOUT="Checkout als gast"
 COM_BIXPRINTSHOP_CONFIG_GUESTCHECKOUT_DESC="Sta gebruiker toe naar checkout te gaan zonder in te loggen."
 
 ;gegevens
+COM_BIXPRINTSHOP_CONFIG_GEGEVENS_BEDRIJFSNAAM="Bedrijfsnaam"
 COM_BIXPRINTSHOP_LEGEND_CONFIG_GEGEVENS="Gegevens"
 COM_BIXPRINTSHOP_CONFIG_GEGEVENS_ADRES="Adres"
 COM_BIXPRINTSHOP_CONFIG_GEGEVENS_POSTCODE="Postcode"
@@ -536,6 +539,8 @@ COM_BIXPRINTSHOP_OPTION_OPSTARTPRIJS="Opstartprijs"
 COM_BIXPRINTSHOP_OPTION_PRIJSPERSTUK="Kosten per stuk"
 COM_BIXPRINTSHOP_OPTION_MOVE="Versleep om volgorde aan te passen."
 COM_BIXPRINTSHOP_OPTION_DELETE="Klik om te verwijderen."
+COM_BIXPRINTSHOP_OPTION_PRICEPERCENTAGE="Percentage"
+COM_BIXPRINTSHOP_OPTION_PRICEPERCENTAGE_DESC="Geef percentage korting/opslag in, berekend tov basisprijs."
 
 ;params
 COM_BIXPRINTSHOP_PARAMS_ARTICLEID="Helptekst ID"
@@ -626,6 +631,10 @@ COM_BIXPRINTSHOP_PRODUCT_ATTRIBS_INPRODUCT="Gekoppelde productopties"
 COM_BIXPRINTSHOP_PRODUCTEN_PAGETITLE="Paginatitel"
 COM_BIXPRINTSHOP_PRODUCTEN_PAGETITLE_DESC="Geef eventueel een alternatieve paginatitel op. Standaard wordt de productnaam gebruikt."
 
+COM_BIXPRINTSHOP_PRODUCTEN_POS_BOTTOM="Onder formulier"
+COM_BIXPRINTSHOP_PRODUCTEN_POS_SIDETOP="Naast form - Boven"
+COM_BIXPRINTSHOP_PRODUCTEN_POS_SIDEBOTTOM="Naast form - Onder"
+
 ;drukvellen
 COM_BIXPRINTSHOP_AANTAL_VAN_TOT_SPRF="Van %s tot %s stuks"
 COM_BIXPRINTSHOP_GEWICHT_VAN_TOT_SPRF="Van %s tot %s kilo"
@@ -647,6 +656,8 @@ BIX_UPLOAD_PROGRESS="{percent}% van {total_size}"
 BIX_UPLOAD_WAITING="Wachten"
 BIX_DOWNLOAD="Download"
 BIX_DELETE="Verwijderen"
+COM_BIXPRINTSHOP_MACHINE_DELETEDRUKVEL="Drukvel verwijderen"
+COM_BIXPRINTSHOP_DRUKVEL_CONFIRM_DELETE="Wilt u dit drukvel verwijderen bij deze machine?"BIX_UPLOAD_FILE="Upload bestand"
 COM_BIXPRINTSHOP_ERROR_DELETING_DRUKVEL="Drukvel verwijderen is mislukt"
 COM_BIXPRINTSHOP_MACHINE_DELETED="Machine verwijderd"
 COM_BIXPRINTSHOP_SAVE_ORDERING_SUCCESS="Volgorde gewijzigd"
@@ -925,7 +936,7 @@ COM_BIXPRINTSHOP_PRODUCTEN_USERID="Gebruikers ID"
 COM_BIXPRINTSHOP_ORDER_DRUKKERIJ="Drukkerij"
 COM_BIXPRINTSHOP_ORDER_NO_DRUKKERIJ="Geen drukkerij geselecteerd"
 COM_BIXPRINTSHOP_ORDER_ORDERCOMMENT="Opmerking"
-COM_BIXPRINTSHOP_ORDER_ORDERDATUM="Leverdatum"
+COM_BIXPRINTSHOP_ORDER_ORDERDATUM="Orderdatum"
 COM_BIXPRINTSHOP_ORDER_LEVERDATUM="Leverdatum"
 COM_BIXPRINTSHOP_ORDER_LEVERDATUM_DESC="De geplande leverdatum voor deze order"
 COM_BIXPRINTSHOP_ORDER_PLANOINKOOP="Plano inkoop"
