--- a/administrator/language/nl-NL/nl-NL.plg_bixprintshop_vervoer_standaardvervoer.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_bixprintshop_vervoer_standaardvervoer.ini
@@ -16,3 +16,5 @@ TRANSPORTDUUR_1_DAG_1700="Overnight voor 17.00uur"
 TRANSPORTDUUR_2_DAG_1700="2 dagen na verzending voor 17.00uur"
 TRANSPORTDUUR_3_DAG_1700="3 dagen na verzending voor 17.00uur"
 TRANSPORTDUUR_4_DAG_1700="4 dagen na verzending voor 17.00uur"
+COM_BIXPRINTSHOP_ATTRIBTYPE_UITVOERTERMIJN_LEVERZATERDAG="Levering op zaterdag"
+COM_BIXPRINTSHOP_ATTRIBTYPE_UITVOERTERMIJN_LEVERZATERDAG_DESC="Deze vervoerder levert ook op zaterdag uit."
