--- a/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -657,7 +657,8 @@ BIX_UPLOAD_WAITING="Wachten"
 BIX_DOWNLOAD="Download"
 BIX_DELETE="Verwijderen"
 COM_BIXPRINTSHOP_MACHINE_DELETEDRUKVEL="Drukvel verwijderen"
-COM_BIXPRINTSHOP_DRUKVEL_CONFIRM_DELETE="Wilt u dit drukvel verwijderen bij deze machine?"BIX_UPLOAD_FILE="Upload bestand"
+COM_BIXPRINTSHOP_DRUKVEL_CONFIRM_DELETE="Wilt u dit drukvel verwijderen bij deze machine?"
+BIX_UPLOAD_FILE="Upload bestand"
 COM_BIXPRINTSHOP_ERROR_DELETING_DRUKVEL="Drukvel verwijderen is mislukt"
 COM_BIXPRINTSHOP_MACHINE_DELETED="Machine verwijderd"
 COM_BIXPRINTSHOP_SAVE_ORDERING_SUCCESS="Volgorde gewijzigd"
