--- a/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -448,6 +448,7 @@ COM_BIXPRINTSHOP_ATTRIBS_ATTRIBDESCR_DESC="Helptekst bij invullen."
 COM_BIXPRINTSHOP_ATTRIBS_ATTRIBTYPE="Type optie"
 COM_BIXPRINTSHOP_ATTRIBS_ATTRIBTYPE_DESC="Selecteer type optie"
 COM_BIXPRINTSHOP_ATTRIBS_ATTRIBTYPE_ALERT="Als het veldtype veranderd wordt, gaan de parameters verloren! Sla de productoptie op om de nieuwe parameters te laden."
+COM_BIXPRINTSHOP_ATTRIBTYPE_UITVOERTERMIJN="Levertijd"
 ATTRIBCALCON_AFWERKING="Afwerking"
 ATTRIBCALCON_BESTELLING="Bestelling"
 ATTRIBCALCON_CART="Winkelwagen"
@@ -763,6 +764,8 @@ COM_BIXPRINTSHOP_ATTRIBTYPES_FORMAT_HEIGHT="Hoogte"
 COM_BIXPRINTSHOP_ATTRIBTYPES_FORMAT_HEIGHT_DESC=""
 COM_BIXPRINTSHOP_ATTRIBTYPES_FORMAT_WIDTH="Breedte"
 COM_BIXPRINTSHOP_ATTRIBTYPES_FORMAT_WIDTH_DESC=""
+COM_BIXPRINTSHOP_ATTRIBTYPE_UITVOERTERMIJN_DAGENMIN="Min. levertermijn"
+COM_BIXPRINTSHOP_ATTRIBTYPE_UITVOERTERMIJN_DAGENMAX="Max. levertermijn"
 COM_BIXPRINTSHOP_NUMMERING_BEGINAANTAL_LBL="Beginaantal"
 COM_BIXPRINTSHOP_NUMMERING_BEGINAANTAL="Beginaantal"
 COM_BIXPRINTSHOP_PARAMS_MULTIPLE="Meerdere"
@@ -876,7 +879,7 @@ COM_BIXPRINTSHOP_DRUKVEL_MACHINEID="Drukvel machine ID"
 BIX_DEFAULT_DRUKVEL="Standaard drukvel"
 COM_BIXPRINTSHOP_DRUKVEL_IDENTIFIER="Drukvel Identifier"
 COM_BIXPRINTSHOP_DRUKVEL_IDENTIFIER_DESC=""
-COM_BIXPRINTSHOP_DRUKVEL_DRUKVELNAAM="Drukvenaam"
+COM_BIXPRINTSHOP_DRUKVEL_DRUKVELNAAM="Drukvelnaam"
 COM_BIXPRINTSHOP_DRUKVEL_DRUKVELNAAM_DESC=""
 COM_BIXPRINTSHOP_DRUKVEL_MACHINETYPE="Drukvel machinetype"
 COM_BIXPRINTSHOP_DRUKVEL_MACHINETYPE_DESC=""
@@ -1130,6 +1133,10 @@ COM_BIXPRINTSHOP_MAILHISTORIE_BESTELLING="Bestelling"
 COM_BIXPRINTSHOP_MAILHISTORIE_DRUKKERIJ="Drukkerij"
 COM_BIXPRINTSHOP_MAILHISTORIE_ADMIN="Admin"
 COM_BIXPRINTSHOP_MAILHISTORIE_NOMAIL="Geen mailberichten"
+
+;prijzen
+BIX_SELECT_PRODUCT="Selecteer product"
+BIX_SELECT_DRUKKER="Selecteer drukkerij"
 
 ;vervoerders
 COM_BIXPRINTSHOP_TITLE_VERVOERDER="Transportmethode"
