aantal bug en descr

--- a/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -990,10 +990,10 @@ COM_BIXPRINTSHOP_PAPIERPRIJS_DATUMVANAF="Datum vanaf"
 COM_BIXPRINTSHOP_PAPIERPRIJS_DATUMVANAF_DESC=""
 COM_BIXPRINTSHOP_PAPIERPRIJS_DATUMTOT="Datum tot"
 COM_BIXPRINTSHOP_PAPIERPRIJS_DATUMTOT_DESC=""
-COM_BIXPRINTSHOP_PAPIERPRIJS_AANTALVANAF="Aatal vanaf"
-COM_BIXPRINTSHOP_PAPIERPRIJS_AANTALVANAF_DESC=""
-COM_BIXPRINTSHOP_PAPIERPRIJS_AANTALTOT="Aantal tot"
-COM_BIXPRINTSHOP_PAPIERPRIJS_AANTALTOT_DESC=""
+COM_BIXPRINTSHOP_PAPIERPRIJS_AANTALVANAF="Aantal vanaf"
+COM_BIXPRINTSHOP_PAPIERPRIJS_AANTALVANAF_DESC="Hier geldt vanaf en met dit aantal"
+COM_BIXPRINTSHOP_PAPIERPRIJS_AANTALTOT="Aantal tot aan"
+COM_BIXPRINTSHOP_PAPIERPRIJS_AANTALTOT_DESC="Tot dit getal, dus niet inclusief. Voer de reeksen als volgt in: 1-10,10-20,20-30 etc..."
 COM_BIXPRINTSHOP_PAPIERPRIJS_PRIJS="Prijs"
 COM_BIXPRINTSHOP_PAPIERPRIJS_PRIJSEENHEID="Eenheid"
 COM_BIXPRINTSHOP_PAPIERPRIJS_PRIJSEENHEID_DESC=""
