--- a/administrator/language/nl-NL/nl-NL.plg_bixprintshop_jscript_verzamel.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_bixprintshop_jscript_verzamel.ini
@@ -6,9 +6,12 @@ COM_BIXPRINTSHOP_PLG_VERZAMEL_FIELDSETDESCR="Berekenen van de productprijs met J
 COM_BIXPRINTSHOP_PLG_VERZAMEL_FIELDSETTITLE="Verzamelprijzen"
 COM_BIXPRINTSHOP_PLG_VERZAMEL_ACTIVE="Activeer verzamelprijzen"
 COM_BIXPRINTSHOP_PLG_VERZAMEL_LOG="Houd log bij"
+COM_BIXPRINTSHOP_PLG_VERZAMEL_CACHE="Gebruik DB-caching"
 COM_BIXPRINTSHOP_PLG_VERZAMEL_DEBUG="Toon debug"
 COM_BIXPRINTSHOP_PLG_VERZAMEL_DEBUG_DESC="Toon debuginformatie in de browser"
 COM_BIXPRINTSHOP_PLG_VERZAMEL_STANDAARDUITVOER="Standaardwaarde uitoertermijn"
+COM_BIXPRINTSHOP_PLG_VERZAMEL_VOLLEDIGEOPLAGE="Volledige oplage ophalen"
+COM_BIXPRINTSHOP_PLG_VERZAMEL_VOLLEDIGEOPLAGE_DESC="Als alleen de oplage nog gekozen moet worden, alle mogelijke oplages en uitovertermijnen ophalen."
 
 COM_BIXPRINTSHOP_PLG_VERZAMEL_GEENPRIJS="Geen prijs gevonden"
 
@@ -16,3 +19,7 @@ COM_BIXPRINTSHOP_PLG_VERZAMEL_DISABLEDSTYLE="Weergave onmogelijke opties"
 COM_BIXPRINTSHOP_PLG_VERZAMEL_TYPEDRUK="Type machine"
 TYPEDRUK_DIGITAAL="Digitaal"
 TYPEDRUK_OFFSET="Offset"
+
+;frontend uitvoeroplage
+COM_BIXPRINTSHOP_PLG_VERZAMEL_OPLAGE="Oplage"
+COM_BIXPRINTSHOP_PLG_VERZAMEL_ANDEREOPLAGE="Andere oplage"
