--- a/administrator/language/nl-NL/nl-NL.plg_bixprintshop_jscript_verzamel.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_bixprintshop_jscript_verzamel.ini
@@ -27,3 +27,4 @@ COM_BIXPRINTSHOP_PLG_VERZAMEL_DIGITAALPERS="Full color digitaal"
 COM_BIXPRINTSHOP_PLG_VERZAMEL_DIGITAALPERS_DESC="Full color digitaal beschr"
 COM_BIXPRINTSHOP_PLG_VERZAMEL_OFFSETPERS="Full color offset"
 COM_BIXPRINTSHOP_PLG_VERZAMEL_OFFSETPERS_DESC="Full color offset beschr"
+COM_BIXPRINTSHOP_PLG_VERZAMEL_VERW_LEVERDATUM="Verwachte leverdatum"
