--- a/administrator/language/nl-NL/nl-NL.plg_bixprintshop_wrgave_productslides.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_bixprintshop_wrgave_productslides.ini
@@ -4,7 +4,8 @@
 COM_BIXPRINTSHOP_PLG_PRODUCTSLIDES_XML_DESCRIPTION="Weergave van slides om de productopties."
 
 COM_BIXPRINTSHOP_PLG_PRODUCTSLIDES_FIELDSETTITLE="Productslides"
-
+COM_BIXPRINTSHOP_PLG_PRODUCTSLIDES_SHOWVALUES="Toon geselecteerde waarde"
+COM_BIXPRINTSHOP_PLG_PRODUCTSLIDES_SHOWVALUES_DESC="Toon geselecteerde waarde i.p.v. slidebeschrijving"
 COM_BIXPRINTSHOP_PLG_PRODUCTSLIDES_TOON_IN_SLIDE="Toon in slide"
 TOON_IN_SLIDE_NIET="Niet in slider"
 TOON_IN_SLIDE_1="Slide 1"
