--- a/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -171,7 +171,6 @@ COM_BIXPRINTSHOP_BESTELLING_BETALINGDATUM="Datum betaling"
 COM_BIXPRINTSHOP_BESTELLING_ORDERS="Gekoppelde orders"
 COM_BIXPRINTSHOP_BESTELLING_BETAALID="Betaal ID"
 COM_BIXPRINTSHOP_BESTELLING_BETALINGSTATUS="Status betaling"
-BIX_UPLOAD_FILE="Klik hier om bestand(en) uploaden bij bestelling"
 COM_BIXPRINTSHOP_AFRONDEN="Bestelling afronden"
 COM_BIXPRINTSHOP_CHECKOUT_FACTUURADRES="Factuuradres"
 COM_BIXPRINTSHOP_CHECKOUT_VERZENDADRES="Verzendadres"
@@ -181,8 +180,8 @@ COM_BIXPRINTSHOP_CART_KORTING="Kortingscode"
 COM_BIXPRINTSHOP_CART_KORTING_DESC="Voer uw kortingscode in"
 COM_BIXPRINTSHOP_CART_KORTING_INFO_TITLE="Korting via een couponcode"
 ; Upload
-COM_BIXPRINTSHOP_DROPBOX="Of sleep direct je bestanden in het kader"
-BIX_UPLOAD_FILE="Upload bestand"
+COM_BIXPRINTSHOP_DROPBOX="Of sleep direct uw bestanden in het kader"
+BIX_UPLOAD_FILE="Klik om een bestand te selecteren"
 BIX_RETRY="Opnieuw"
 BIX_UPLOAD_FAILED="Upload mislukt"
 BIX_UPLOAD_DROPFILES="Sleep bestanden in dit kader om te deze te uploaden."
