--- a/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -654,7 +654,7 @@ BIX_UPLOAD_DROPFILES="Sleep bestanden in dit kader om te deze te uploaden."
 BIX_UPLOAD_PROCESSING_FILES="Bestanden verwerken.."
 BIX_UPLOAD_PROGRESS="{percent}% van {total_size}"
 BIX_UPLOAD_WAITING="Wachten"
-BIX_DOWNLOAD="Download"
+BIX_DOWNLOAD="Downloaden"
 BIX_DELETE="Verwijderen"
 COM_BIXPRINTSHOP_MACHINE_DELETEDRUKVEL="Drukvel verwijderen"
 COM_BIXPRINTSHOP_DRUKVEL_CONFIRM_DELETE="Wilt u dit drukvel verwijderen bij deze machine?"
@@ -868,6 +868,8 @@ COM_BIXPRINTSHOP_CONFIG_UPLOAD_SIZELIMIT="Maximale bestandsgrootte"
 COM_BIXPRINTSHOP_CONFIG_UPLOAD_SIZELIMIT_DESC=""
 COM_BIXPRINTSHOP_CONFIG_UPLOAD_HIDEDROPZONES="Verberg uploadkader"
 COM_BIXPRINTSHOP_CONFIG_UPLOAD_HIDEDROPZONES_DESC=""
+COM_BIXPRINTSHOP_CONFIG_UPLOAD_SHOW_ZOOM="Toon zoom effect"
+COM_BIXPRINTSHOP_CONFIG_UPLOAD_SHOW_ZOOM_DESC="toont widgetkit gallery wall effect op uploads"
 COM_BIXPRINTSHOP_DOWNLOAD_DOWNLOADID="Download ID"
 COM_BIXPRINTSHOP_DOWNLOAD_USERID="Gebruikers ID"
 COM_BIXPRINTSHOP_DOWNLOAD_PRIVATE="Privé"
