--- a/administrator/language/nl-NL/nl-NL.plg_bixprintshop_order_bestandscontrole.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_bixprintshop_order_bestandscontrole.ini
@@ -44,13 +44,13 @@ COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_SLUITEN="Sluiten"
 
 COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_GEEN_BESTANDEN="Nog geen bestanden geüpload. Upload bestanden in de vorige stap."
 COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_FOUT_BIJ_VERZENDEN="Fout bij klaarmaken bestanden voor controle"
-COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_BESTAND_GEEN_PDF_SPR="Bestand %s is geen PDF bestand!"
+COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_BESTAND_GEEN_PDF_SPR="Bestand %s is geen PDF bestand! Bestand overgeslagen voor controle."
 COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_BESTAND_VERZONDEN_SPR="Bestand %s wordt gecontroleerd."
 
 COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_CONTROLEID="Controle ID"
 COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_FILEID="Bestands ID"
 COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_ORDERID="Order ID"
-
+COM_BIXPRINTSHOP_UPLOADEN="Klik om uw bestanden te uploaden"
 
 
 COM_BIXPRINTSHOP_IDEALCHECKOUT_CONTROLEID="Controle ID"
