--- a/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -7,6 +7,7 @@ COM_BIXPRINTSHOP_TITLE_CHECKOUT="Afrekenen"
 ; algemeen
 BIX_ADRES_TOEVOEGEN="Adres toevoegen"
 BIX_MAAK_KEUZE="Maak keuze"
+BIX_CANCEL="Annuleren"
 BIX_RESET="Reset"
 BIX_ZOEKEN="Zoeken"
 BIX_SORTERING="Sortering"
@@ -47,6 +48,7 @@ COM_BIXPRINTSHOP_EXBTW="excl. BTW"
 COM_BIXPRINTSHOP_INBTW="incl. BTW"
 COM_BIXPRINTSHOP_BTW_SPR="%s BTW"
 BIX_AANTAL_STUKS="Aantal stuks"
+
 ;factuurtemplate
 COM_BIXPRINTSHOP_FACTUUR_TITLE="Factuur"
 COM_BIXPRINTSHOP_FACTUUR_BETREFT="Betreft"
@@ -120,6 +122,10 @@ COM_BIXPRINTSHOP_TO_CHECKOUT="Verder naar betaling"
 COM_BIXPRINTSHOP_BUTTON_PRODUCTENOVERZICHT="Productoverzicht"
 COM_BIXPRINTSHOP_EMPTY_CART="Winkelwagen legen"
 COM_BIXPRINTSHOP_OPSLAANOFFERTE="Opslaan als offerte"
+COM_BIXPRINTSHOP_ORDER_ORDERCOMMENT="Opmerking"
+COM_BIXPRINTSHOP_ORDER_ORDERDATUM="Orderdatum"
+COM_BIXPRINTSHOP_ORDER_LEVERDATUM="Leverdatum"
+COM_BIXPRINTSHOP_ORDER_LEVERDATUM_DESC="De geplande leverdatum voor deze order"
 
 ; checkout
 COM_BIXPRINTSHOP_LOGIN_RESET="Wachtwoord vergeten?"
@@ -188,7 +194,7 @@ BIX_UPLOAD_DROPFILES="Sleep bestanden in dit kader om te deze te uploaden."
 BIX_UPLOAD_PROCESSING_FILES="Bestanden verwerken.."
 BIX_UPLOAD_PROGRESS="{percent}% van {total_size}"
 BIX_UPLOAD_WAITING="Wachten"
-BIX_DOWNLOAD="Download"
+BIX_DOWNLOAD="Downloaden"
 BIX_DELETE="Verwijderen"
 ; Profiel
 COM_BIXPRINTSHOP_BUTTON_PROFIEL="Mijn profiel"
