--- a/administrator/language/nl-NL/nl-NL.plg_bixprintshop_order_bestandscontrole.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_bixprintshop_order_bestandscontrole.ini
@@ -2,8 +2,8 @@
 ; Note : All ini files need to be saved as UTF-8
 ;
 COM_BIXPRINTSHOP_PLG_BESTANDSCONTROLE_DESCR="Plugin voor attribtype brocheren"
-
 COM_BIXPRINTSHOP_PLUGIN_TITLE_BESTANDSCONTROLE="Bestandscontrole"
+;config
 COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_WETRANSFERMAIL="WeTransfer mailadres"
 COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_WETRANSFER="URL WeTransfer"
 
@@ -18,7 +18,18 @@ BESTANDSCONTROLE_UPLOADTYPE_WETRANSFER="WeTransfer"
 BESTANDSCONTROLE_UPLOADTYPE_AUTOMAAT_DESC="Automatische controle beschr"
 BESTANDSCONTROLE_UPLOADTYPE_HANDMATIG_DESC="Handmatige controle beschr"
 BESTANDSCONTROLE_UPLOADTYPE_WETRANSFER_DESC="WeTransfer beschr"
-
+;table
+COM_BIXPRINTSHOP_BESTANDSCONTROLE_CONTROLEID="Controle ID"
+COM_BIXPRINTSHOP_BESTANDSCONTROLE_CONTROLESTATUS=""
+CONTROLE_WACHTEND="Wachtend"
+CONTROLE_ONTVANGEN="Controle ontvangen"
+CONTROLE_ONMOGELIJK="Niet mogelijk"
+COM_BIXPRINTSHOP_BESTANDSCONTROLE_FILENAME="Bestandsnaam"
+COM_BIXPRINTSHOP_BESTANDSCONTROLE_FILEID="Bestands ID"
+COM_BIXPRINTSHOP_BESTANDSCONTROLE_UPLOADDATUM="Uploaddatum"
+COM_BIXPRINTSHOP_BESTANDSCONTROLE_FILEPATH="Bestand-pad"
+COM_BIXPRINTSHOP_BESTANDSCONTROLE_ZIPPATH="Zip-pad"
+;uploadfront
 COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_BEVESTIG_BESTANDEN="Bestanden bevestigen"
 
 COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_BESTANDEN_UPLOADEN="Bestanden uploaden"
@@ -52,17 +63,14 @@ COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_FILEID="Bestands ID"
 COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_ORDERID="Order ID"
 COM_BIXPRINTSHOP_UPLOADEN="Klik om uw bestanden te uploaden"
 
+;return front
+COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_FOUT="Fout in controle"
+COM_BIXPRINTSHOP_BESTANDSCONTROLE_CONTROLE_WACHT_DESCR="De automatische bestandscontrole is bezig. Een moment geduld."
+COM_BIXPRINTSHOP_BESTANDSCONTROLE_CONTROLE_ONTVANGEN_DESCR="Feedback van de automatische bestandscontrole is ontvangen"
+COM_BIXPRINTSHOP_BESTANDSCONTROLE_CONTROLE_ONMOGELIJK_DESCR="Automatische bestandscontrole is niet mogelijk. Het bestand wordt handmatig bekeken."
+COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_NIET_GEVONDEN="Controledata niet gevonden"
 
-COM_BIXPRINTSHOP_IDEALCHECKOUT_CONTROLEID="Controle ID"
-COM_BIXPRINTSHOP_IDEALCHECKOUT_FILENAME="Bestandsnaam"
-COM_BIXPRINTSHOP_IDEALCHECKOUT_FILEID="Bestands ID"
-COM_BIXPRINTSHOP_IDEALCHECKOUT_UPLOADDATUM="Uploaddatum"
-COM_BIXPRINTSHOP_IDEALCHECKOUT_FILEPATH="Bestand-pad"
-COM_BIXPRINTSHOP_IDEALCHECKOUT_ZIPPATH="Zip-pad"
-
-
-
-
+COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_MEERDETAILS="Klik voor meer details"
 
 
 
