--- a/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -22,7 +22,8 @@ BIX_AANTAL_ITEMS="Aantal per pagina"
 BIX_AANTAL_PAGS="Aantal pagina's"
 BIX_OKE="Oké"
 BIX_VERZILVER="Verzilver"
-
+BIX_DATE="d-m-Y H:i:s"
+BIX_SUCCESS="Succesvol"
 ; controller
 COM_BIXPRINTSHOP_DELETE_SUCCESS="Item succesvol naar prullenbak verplaatst"
 COM_BIXPRINTSHOP_SAVE_ORDERING_SUCCESS="Volgorde gewijzigd"
