front-back scheiding

--- a/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -942,6 +942,7 @@ COM_BIXPRINTSHOP_ORDER_DRUKKERIJ="Drukkerij"
 COM_BIXPRINTSHOP_ORDER_NO_DRUKKERIJ="Geen drukkerij geselecteerd"
 COM_BIXPRINTSHOP_ORDER_ORDERCOMMENT="Opmerking"
 COM_BIXPRINTSHOP_ORDER_ORDERDATUM="Orderdatum"
+COM_BIXPRINTSHOP_ORDER_BESTANDEN="Bestanden"
 COM_BIXPRINTSHOP_ORDER_LEVERDATUM="Leverdatum"
 COM_BIXPRINTSHOP_ORDER_LEVERDATUM_DESC="De geplande leverdatum voor deze order"
 COM_BIXPRINTSHOP_ORDER_PLANOINKOOP="Plano inkoop"
