--- a/administrator/language/nl-NL/nl-NL.plg_bixprintshop_order_bestandscontrole.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_bixprintshop_order_bestandscontrole.ini
@@ -71,6 +71,7 @@ COM_BIXPRINTSHOP_BESTANDSCONTROLE_CONTROLE_ONMOGELIJK_DESCR="Automatische bestan
 COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_NIET_GEVONDEN="Controledata niet gevonden"
 
 COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_MEERDETAILS="Klik voor meer details"
+COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_ADDFILE="Bestand toevoegen"
 
 
 
