--- a/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -23,7 +23,7 @@ BIX_AANTAL_PAGS="Aantal pagina's"
 BIX_OKE="Oké"
 BIX_VERZILVER="Verzilver"
 BIX_DATE="d-m-Y H:i:s"
-BIX_SUCCESS="Succesvol"
+
 ; controller
 COM_BIXPRINTSHOP_DELETE_SUCCESS="Item succesvol naar prullenbak verplaatst"
 COM_BIXPRINTSHOP_SAVE_ORDERING_SUCCESS="Volgorde gewijzigd"
@@ -65,6 +65,15 @@ COM_BIXPRINTSHOP_FACTUUR_TOTAAL_NETTO="Totaal netto"
 COM_BIXPRINTSHOP_FACTUUR_TOTAAL_BTW="Totaal BTW"
 COM_BIXPRINTSHOP_FACTUUR_TOTAAL_BRUTO="Totaal bruto"
 COM_BIXPRINTSHOP_FACTUUR_VOLDAAN_SPRF="Factuur voldaan via %s, betaling-ID: %s"
+FACTUUR_INITIEEL="Initiëel"
+FACTUUR_RESERVERING="Reservering"
+FACTUUR_CREDIT="Credit"
+FACTUUR_GECREDITEERD="Gecrediteerd"
+COM_BIXPRINTSHOP_FACTUUR_FACTUURNUMMER="Factuurnummer"
+COM_BIXPRINTSHOP_FACTUUR_FACTUURSTATUS="Factuurstatus"
+COM_BIXPRINTSHOP_FACTUUR_FACTUURLINK="Factuur link"
+COM_BIXPRINTSHOP_FACTUUR_FACTUURDATUM="Factuurdatum"
+COM_BIXPRINTSHOP_DOWNLOAD_FACTUUR="Factuur downloaden"
 
 ; users, adressen
 COM_BIXPRINTSHOP_USER_TITLE_GEGEVENS="Gegevens"
@@ -112,6 +121,7 @@ COM_BIXPRINTSHOP_DELETE_ORDER="Verwijder order"
 COM_BIXPRINTSHOP_DELETE_ORDER_DESC="Verwijder deze order uit de winkelwagen"
 COM_BIXPRINTSHOP_ORDERID="Order ID"
 COM_BIXPRINTSHOP_ORDERNETTO="Nettototaal order"
+COM_BIXPRINTSHOP_ORDERBRUTO="Brutototaal order"
 COM_BIXPRINTSHOP_ORDERBTW="BTW bedrag"
 COM_BIXPRINTSHOP_NETTOKORTING="Kortingsbedrag"
 COM_BIXPRINTSHOP_ADMINISTRATIEKOSTEN="Administratiekosten"
@@ -163,7 +173,6 @@ COM_BIXPRINTSHOP_ADRESSEN_IN_PROFIEL="Adressen kunt u invoeren in uw gebruikersp
 COM_BIXPRINTSHOP_TITLE_AFRONDEN="Bestelling afronden"
 COM_BIXPRINTSHOP_TO_PAYMENT="Verder naar betaling"
 COM_BIXPRINTSHOP_BESTELLING_BESTELID="Bestelnummer"
-COM_BIXPRINTSHOP_BESTELDETAILS="Details bestelling"
 COM_BIXPRINTSHOP_BESTELLING_BESTELLINGDATUM="Besteldatum"
 COM_BIXPRINTSHOP_BESTELLING_BESTELSTATUS="Status bestelling"
 COM_BIXPRINTSHOP_BESTELLING_BESTELCOMMENT="Opmerking bij bestelling"
@@ -186,6 +195,23 @@ COM_BIXPRINTSHOP_CHECKOUT_BETAALMETHODE_SELECTEREN="Selecteer de gewenste betaal
 COM_BIXPRINTSHOP_CART_KORTING="Kortingscode"
 COM_BIXPRINTSHOP_CART_KORTING_DESC="Voer uw kortingscode in"
 COM_BIXPRINTSHOP_CART_KORTING_INFO_TITLE="Korting via een couponcode"
+
+;statussen
+BIX_SUCCESS="Voltooid"
+BIX_FAILURE="Betaalrequest mislukt"
+BIX_BETALING_VERWERK="Wachtend op betaling"
+BIX_VALIDATION_ERR="Betaalrequest niet valide"
+BIX_TECHNICAL_ERR="Technische fout"
+BIX_REJECTED="Geweigerd"
+BIX_PENDING="In verwerking"
+BIX_CANCELLED="Onderbroken door gebruiker"
+BIX_CANCELLED_MERCH="Onderbroken door bank"
+;foutmeldingen
+COM_BIXPRINTSHOP_BETALEN_GEENBESTELID="Geen bestelling-ID gevonden! Bekijk de order via uw gebruikersprofiel"
+COM_BIXPRINTSHOP_BETALEN_GEEN_PLUGINRETURN="Geen return ontvangen van betaalplugins."
+COM_BIXPRINTSHOP_BETALEN_PUSH_GEENBESTELID="Geen bestelling-ID in push bericht!"
+COM_BIXPRINTSHOP_BETALEN_PUSH_FOUT="Fout in verwerking pushbericht betaalprovider"
+
 ; Upload
 COM_BIXPRINTSHOP_DROPBOX="Of sleep direct uw bestanden in het kader"
 BIX_UPLOAD_FILE="Klik om een bestand te selecteren"
@@ -205,6 +231,8 @@ COM_BIXPRINTSHOP_USER_PROFILE="Uw gegevens"
 COM_BIXPRINTSHOP_BESTELLING_ID="Bestelling"
 COM_BIXPRINTSHOP_ORDER_ID="Order"
 COM_BIXPRINTSHOP_ORDER_STATUS="Orderstatus"
+COM_BIXPRINTSHOP_ORDER_BESTANDEN="Orderbestanden"
+COM_BIXPRINTSHOP_TITLE_BESTELDETAILS="Details bestelling"
 COM_BIXPRINTSHOP_BESTELLING_DATUM="Besteldatum"
 COM_BIXPRINTSHOP_BESTELLING_BETAALMETHODE="Betaalmethode"
 COM_BIXPRINTSHOP_BESTELLING_BETAALDATUM="Betaaldatum"
@@ -212,6 +240,8 @@ COM_BIXPRINTSHOP_BESTELLING_STATUS="Bestellingstatus"
 COM_BIXPRINTSHOP_BESTELLING_FACTUURGEGEVENS="Factuurgegevens"
 COM_BIXPRINTSHOP_BESTELLING_BESTELUMMER="Bestelling "
 COM_BIXPRINTSHOP_BESTELLING_DETAILS="Bestellingdetails"
+COM_BIXPRINTSHOP_ORDER_PLANOSHORT_OPLAGE_SPR="%s stuks"
+COM_BIXPRINTSHOP_ORDER_PLANOSHORT_OPLAGEOMVANG_SPR="%s stuks, omvang %s pagina's"
 COM_BIXPRINTSHOP_TITLE_OFFERTEDETAILS="Offertedetails"
 COM_BIXPRINTSHOP_OFFERTE_ID="Offertenummer"
 COM_BIXPRINTSHOP_OFFERTE_BESTELID="Offertenummer"
