--- a/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -23,6 +23,7 @@ BIX_AANTAL_PAGS="Aantal pagina's"
 BIX_OKE="Oké"
 BIX_VERZILVER="Verzilver"
 BIX_DATE="d-m-Y H:i:s"
+BIX_ACTIVE="Actief"
 
 ; controller
 COM_BIXPRINTSHOP_DELETE_SUCCESS="Item succesvol naar prullenbak verplaatst"
@@ -49,7 +50,7 @@ COM_BIXPRINTSHOP_EXBTW="excl. BTW"
 COM_BIXPRINTSHOP_INBTW="incl. BTW"
 COM_BIXPRINTSHOP_BTW_SPR="%s BTW"
 BIX_AANTAL_STUKS="Aantal stuks"
-
+COM_BIXPRINTSHOP_BTW="BTW"
 ;factuurtemplate
 COM_BIXPRINTSHOP_FACTUUR_TITLE="Factuur"
 COM_BIXPRINTSHOP_FACTUUR_BETREFT="Betreft"
@@ -123,10 +124,11 @@ COM_BIXPRINTSHOP_ORDERID="Order ID"
 COM_BIXPRINTSHOP_ORDERNETTO="Nettototaal order"
 COM_BIXPRINTSHOP_ORDERBRUTO="Brutototaal order"
 COM_BIXPRINTSHOP_ORDERBTW="BTW bedrag"
+COM_BIXPRINTSHOP_TOTAALORDERS="Totaal orders"
 COM_BIXPRINTSHOP_NETTOKORTING="Kortingsbedrag"
 COM_BIXPRINTSHOP_ADMINISTRATIEKOSTEN="Administratiekosten"
-COM_BIXPRINTSHOP_CARTNETTO="Nettototaal bestelling"
-COM_BIXPRINTSHOP_CARTBRUTO="Bedrag bestelling"
+COM_BIXPRINTSHOP_CARTNETTO="Subtotaal"
+COM_BIXPRINTSHOP_CARTBRUTO="Totaal"
 COM_BIXPRINTSHOP_CARTBTW="BTW bedrag bestelling"
 COM_BIXPRINTSHOP_CART_IS_EMPTY="Winkelwagen is nog leeg."
 COM_BIXPRINTSHOP_TO_CHECKOUT="Verder naar betaling"
@@ -151,14 +153,16 @@ COM_BIXPRINTSHOP_INLOGGEN="Inloggen"
 COM_BIXPRINTSHOP_INLOGGEN_DESC="Log in met uw bestaande account"
 COM_BIXPRINTSHOP_VOEG_ADERS_TOE="Voeg eerst een adres toe"
 COM_BIXPRINTSHOP_VOEG_FACTUURADRES_TOE_SPR="Stel een standaardfactuuradres in uw %sprofiel%s"
+COM_BIXPRINTSHOP_SELECT_ADRESSEN="Selecteer adressen"
 COM_BIXPRINTSHOP_SELECT_VERZENDADRES="Selecteer een leveradres"
-COM_BIXPRINTSHOP_SELECT_FACTUURADRES="Uw factuuradres"
+COM_BIXPRINTSHOP_SELECT_FACTUURADRES="Selecteer een factuuradres"
 COM_BIXPRINTSHOP_VERZENDADRES="Afleveradres"
 COM_BIXPRINTSHOP_FACTUURADRES="Factuuradres"
 COM_BIXPRINTSHOP_CHECKOUT_JOUWREF="Uw referentie"
 COM_BIXPRINTSHOP_PLG_FACTUURMAIL_FACTUURREFERENTIE_DESC="Vermeld hier uw eigen referentie zoals inkoopnummer of klantnaam."
 COM_BIXPRINTSHOP_CHECKOUT_BESTANDSUPLOAD="Bestandsupload"
 COM_BIXPRINTSHOP_CHECKOUT_BESTANDSUPLOAD_DESC="Het uploaden van bestanden is mogelijk na uw bestelling."
+COM_BIXPRINTSHOP_CHECKOUT_NAARBETALING="Naar betaling"
 COM_BIXPRINTSHOP_BETAALMETHODE="Selecteer betaalmethode"
 COM_BIXPRINTSHOP_EXTRA_INFO="Opmerkingen"
 COM_BIXPRINTSHOP_EXTRA_INFO_TOEVOEGEN="Voeg eventueel extra informatie toe"
@@ -193,9 +197,9 @@ COM_BIXPRINTSHOP_CHECKOUT_VERZENDADRES="Verzendadres"
 COM_BIXPRINTSHOP_CHECKOUT_BETAALMETHODE="Betaalmethode"
 COM_BIXPRINTSHOP_CHECKOUT_BETAALMETHODE_SELECTEREN="Selecteer de gewenste betaalmethode"
 COM_BIXPRINTSHOP_CART_KORTING="Kortingscode"
+COM_BIXPRINTSHOP_CART_KORTING_PLACEHOLDER="Uw kortingscode"
 COM_BIXPRINTSHOP_CART_KORTING_DESC="Voer uw kortingscode in"
 COM_BIXPRINTSHOP_CART_KORTING_INFO_TITLE="Korting via een couponcode"
-
 ;statussen
 BIX_SUCCESS="Voltooid"
 BIX_FAILURE="Betaalrequest mislukt"
