--- a/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -8,6 +8,8 @@ COM_BIXPRINTSHOP_TITLE_CHECKOUT="Afrekenen"
 BIX_ADRES_TOEVOEGEN="Adres toevoegen"
 BIX_MAAK_KEUZE="Maak keuze"
 BIX_CANCEL="Annuleren"
+BIX_SAVE="Opslaan"
+BIX_EDIT="Bewerken"
 BIX_RESET="Reset"
 BIX_ZOEKEN="Zoeken"
 BIX_SORTERING="Sortering"
@@ -217,6 +219,7 @@ COM_BIXPRINTSHOP_BETALEN_PUSH_GEENBESTELID="Geen bestelling-ID in push bericht!"
 COM_BIXPRINTSHOP_BETALEN_PUSH_FOUT="Fout in verwerking pushbericht betaalprovider"
 
 ; Upload
+COM_BIXPRINTSHOP_BESTANDENOVERZICHT="Overzicht bestanden"
 COM_BIXPRINTSHOP_DROPBOX="Of sleep direct uw bestanden in het kader"
 BIX_UPLOAD_FILE="Klik om een bestand te selecteren"
 BIX_RETRY="Opnieuw"
