--- a/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -852,6 +852,8 @@ COM_BIXPRINTSHOP_CONFIG_DEBUG_UPLOADDEBUG="Debug upload"
 COM_BIXPRINTSHOP_CONFIG_DEBUG_UPLOADDEBUG_DESC=""
 COM_BIXPRINTSHOP_CONFIG_UPLOAD_UPLOADFOLDER="Upload map"
 COM_BIXPRINTSHOP_CONFIG_UPLOAD_UPLOADFOLDER_DESC=""
+COM_BIXPRINTSHOP_CONFIG_UPLOAD_MAXCONNECTIONS="Max aantal verbindingen"
+COM_BIXPRINTSHOP_CONFIG_UPLOAD_MAXCONNECTIONS_DESC="Als dit op meer dan 1 gezet wordt, kunnen er problemen ontstaan met opslaan in order!"
 COM_BIXPRINTSHOP_CONFIG_UPLOAD_CHUNKSFOLDER="Upload chuncksmap"
 COM_BIXPRINTSHOP_CONFIG_UPLOAD_CHUNKSFOLDER_DESC=""
 COM_BIXPRINTSHOP_CONFIG_UPLOAD_ALLOWEDEXTENSIONS="Upload toegestane bestandsextensies"
