--- a/administrator/language/nl-NL/nl-NL.plg_bixprintshop_order_bestandscontrole.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_bixprintshop_order_bestandscontrole.ini
@@ -64,6 +64,7 @@ COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_ORDERID="Order ID"
 COM_BIXPRINTSHOP_UPLOADEN="Klik om uw bestanden te uploaden"
 
 ;return front
+COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_UPLOADTYPE_IMAGEDESCR_SPR="Type controle: %s"
 COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_FOUT="Fout in controle"
 COM_BIXPRINTSHOP_BESTANDSCONTROLE_CONTROLE_WACHT_DESCR="De automatische bestandscontrole is bezig. Een moment geduld."
 COM_BIXPRINTSHOP_BESTANDSCONTROLE_CONTROLE_ONTVANGEN_DESCR="Feedback van de automatische bestandscontrole is ontvangen"
