--- a/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -53,6 +53,9 @@ COM_BIXPRINTSHOP_INBTW="incl. BTW"
 COM_BIXPRINTSHOP_BTW_SPR="%s BTW"
 BIX_AANTAL_STUKS="Aantal stuks"
 COM_BIXPRINTSHOP_BTW="BTW"
+COM_BIXPRINTSHOP_NU="Nu"
+COM_BIXPRINTSHOP_ADVIESPRIJS="Adviesprijs"
+
 ;factuurtemplate
 COM_BIXPRINTSHOP_FACTUUR_TITLE="Factuur"
 COM_BIXPRINTSHOP_FACTUUR_BETREFT="Betreft"
