--- a/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -245,6 +245,8 @@ COM_BIXPRINTSHOP_CONFIG_BETALEN_BETAALVARINKOOP="Variabele inkoopkosten"
 COM_BIXPRINTSHOP_CONFIG_BETALEN_BETAALVARINKOOP_DESC="Variabele kosten als inkoopkosten worden berekend bij de bestelling"
 COM_BIXPRINTSHOP_CONFIG_CALC_PRIJSTYPE="Type verkoopprijzen"
 COM_BIXPRINTSHOP_CONFIG_CALC_PRIJSTYPE_DESC="Geef aan hoe de verkoopprijzen tot stand komen."
+COM_BIXPRINTSHOP_CONFIG_CALC_ALLOWEMPTY="Lege opties toestaan"
+COM_BIXPRINTSHOP_CONFIG_CALC_ALLOWEMPTY_DESC="Het is mogelijk productpagina's in te laden zonder standaardwaarden voor de opties. Dit kan ongewenst gedrag veroorzaken!"
 COM_BIXPRINTSHOP_LEGEND_CONFIG_PRODOPTIES="Instellingen productopties"
 COM_BIXPRINTSHOP_CONFIG_CALC_FEESTDAGEN="Feestdagen uitvoertermijn"
 COM_BIXPRINTSHOP_CONFIG_CALC_FEESTDAGEN_DESC="Geef aan welke feestdagen geblokkeerd moeten worden voor orderverwerking. LET OP! Invoeren kommagescheiden, YYYY-MM-DD, als volgt: 2013-12-25,2013-12-26,2013-03-15"
@@ -529,6 +531,7 @@ COM_BIXPRINTSHOP_VERVOERPRIJS_GEWICHTTOT="Gewicht tot"
 BIX_VERVOERPRIJS_TOEVOEGEN="Transportprijs toevoegen"
 ;options/values
 COM_BIXPRINTSHOP_OPTION_OPTIONVALUE="Optie standaardwaarde"
+OPTION_OPTIONVALUE_GEEN="Geen standaardwaarde"
 COM_BIXPRINTSHOP_OPTION_VALUELABEL="Label"
 COM_BIXPRINTSHOP_OPTION_VALUELABEL_DESC="Label is zichtbaar voor de gebruiker"
 COM_BIXPRINTSHOP_OPTION_VALUEVALUE="Waarde"
