--- a/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -186,6 +186,7 @@ COM_BIXPRINTSHOP_BESTELLING_BESTELLINGDATUM="Besteldatum"
 COM_BIXPRINTSHOP_BESTELLING_BESTELSTATUS="Status bestelling"
 COM_BIXPRINTSHOP_BESTELLING_BESTELCOMMENT="Opmerking bij bestelling"
 COM_BIXPRINTSHOP_BESTELLING_BESTELCOMMENT_SHORT="Opmerking"
+COM_BIXPRINTSHOP_BESTELDETAILS="Details bestelling"
 COM_BIXPRINTSHOP_PRIJSDETAILS="Details prijsopbouw"
 COM_BIXPRINTSHOP_TOTAALNETTO="Totaalbedrag netto"
 COM_BIXPRINTSHOP_TOTAALBTW="Totaalbedrag btw"
