--- a/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -243,6 +243,7 @@ COM_BIXPRINTSHOP_BESTELLING_ID="Bestelling"
 COM_BIXPRINTSHOP_ORDER_ID="Order"
 COM_BIXPRINTSHOP_ORDER_STATUS="Orderstatus"
 COM_BIXPRINTSHOP_ORDER_BESTANDEN="Orderbestanden"
+COM_BIXPRINTSHOP_ORDER_ORDERCOMMENT="Opmerking bij deze order"
 COM_BIXPRINTSHOP_TITLE_BESTELDETAILS="Details bestelling"
 COM_BIXPRINTSHOP_BESTELLING_DATUM="Besteldatum"
 COM_BIXPRINTSHOP_BESTELLING_BETAALMETHODE="Betaalmethode"
