--- a/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -64,6 +64,13 @@ BIX_DATE="d-m-Y H:i:s"
 BIX_MM="mm"
 COM_BIXPRINTSHOP_MAIL_SENT_SPR="Email naar %s succesvol verzonden"
 BIX_AANTAL_PAGS="Aantal pagina's"
+BIX_GAST="Gastgebruiker"
+;aanhef
+BIX_AANHEF_FORMEEL_M="Geachte heer %s"
+BIX_AANHEF_FORMEEL_V="Geachte mevrouw %s"
+BIX_AANHEF_INFORMEEL="Beste %s"
+BIX_BRIEFHOOFD_FORMEEL_M="Dhr. %s. %s"
+BIX_BRIEFHOOFD_FORMEEL_V="Mvr. %s. %s"
 ;params (ook in .sys ini)
 COM_BIXPRINTSHOP_PARAMS_TITLE_PRODUCTEN="Categorieoverzicht"
 COM_BIXPRINTSHOP_PARAMS_TITLE_PRODUCT="Productdetails"
@@ -829,6 +836,7 @@ COM_BIXPRINTSHOP_LEGEND_BETALINGHISTORIE="Betalingshistorie"
 COM_BIXPRINTSHOP_LEGEND_BETALING="Betalingdetails"
 COM_BIXPRINTSHOP_LEGEND_BESTELLING_STATUS="Bestelstatus"
 COM_BIXPRINTSHOP_LEGEND_ADRESSEN="Adressen"
+COM_BIXPRINTSHOP_LEGEND_ORDEROPTIONS="Orderopties"
 COM_BIXPRINTSHOP_LEGEND_BESTELLING_FACTUREN="Facturen"
 COM_BIXPRINTSHOP_DOWNLOAD_FACTUUR="Factuur downloaden"
 COM_BIXPRINTSHOP_BESTELLING_VERZENDADRES="Verzendadres"
@@ -975,11 +983,15 @@ COM_BIXPRINTSHOP_ORDER_LOCKCALC_DESC="Voorkom dat de order opnieuw gecalculeerd 
 COM_BIXPRINTSHOP_LEGEND_ORDER_DETAILS="Orderdetails"
 COM_BIXPRINTSHOP_LEGEND_ORDER_STATUS="Order status"
 COM_BIXPRINTSHOP_LEGEND_ORDER_BESTANDEN="Order bestanden"
+COM_BIXPRINTSHOP_LEGEND_ORDER_GEBRUIKER="Gebruikersinfo"
+COM_BIXPRINTSHOP_LEGEND_ORDER_FACTUURADRES="Factuuradres"
 COM_BIXPRINTSHOP_LEGEND_ORDER_VERZENDADRES="Verzendadres"
 COM_BIXPRINTSHOP_LEGEND_ORDER_COMMUNICATIE="Communicatie"
 COM_BIXPRINTSHOP_LEGEND_COMMUNICATIE_KLANT="Klant"
 COM_BIXPRINTSHOP_LEGEND_COMMUNICATIE_DRUKKERIJ="Drukkerij"
-
+COM_BIXPRINTSHOP_ORDER_NAARBESTELLING="Naar bestelling"
+COM_BIXPRINTSHOP_ORDER_NAARUSER="Naar gebruiker"
+COM_BIXPRINTSHOP_ORDER_MARGE_TOTAAL="Totale marge"
 COM_BIXPRINTSHOP_ORDER_MARGE_PLANO="Marge planoprijs"
 COM_BIXPRINTSHOP_ORDER_MARGE_AFWERKING="Marge afwerking"
 COM_BIXPRINTSHOP_ORDER_MARGE_BESTELLING="Marge orderprijs"
