--- a/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -39,6 +39,10 @@ BIX_ERROR_SAVE_ADRES_SPRF="Fout in opslaan adres: %s"
 COM_BIXPRINTSHOP_DUBBELE_ADRESALIAS_SPRF="Alias %s bestaat al."
 COM_BIXPRINTSHOP_ERROR_DELETE_SPRF="Fout bij verwijderen: %s"
 COM_BIXPRINTSHOP_ERROR_ORDERING_SPRF="Fout bij opslaan volgorde: %s"
+
+;meldingen
+COM_BIXPRINTSHOP_ONAFGERONDE_BESTELLING_SPR="Bestelling %s is nog niet afgerond. Klik %shier%s om de bestelling af te ronden."
+COM_BIXPRINTSHOP_ONAFGERONDE_BETALING_SPR="Bestelling %s is nog niet betaald. Klik %shier%s om de bestelling te betalen."
 ; categorie overzicht
 COM_BIXPRINTSHOP_PRODUCTEN_PAGEHEADER="Productoverzicht"
 
@@ -71,6 +75,7 @@ COM_BIXPRINTSHOP_FACTUUR_TOTAAL_NETTO="Totaal netto"
 COM_BIXPRINTSHOP_FACTUUR_TOTAAL_BTW="Totaal BTW"
 COM_BIXPRINTSHOP_FACTUUR_TOTAAL_BRUTO="Totaal bruto"
 COM_BIXPRINTSHOP_FACTUUR_VOLDAAN_SPRF="Factuur voldaan via %s, betaling-ID: %s"
+COM_BIXPRINTSHOP_FACTUUR_NIETVOLDAAN_SPRF="Factuur is nog niet voldaan! Status betaling via %s: %s"
 FACTUUR_INITIEEL="Initiëel"
 FACTUUR_RESERVERING="Reservering"
 FACTUUR_CREDIT="Credit"
@@ -184,6 +189,7 @@ COM_BIXPRINTSHOP_TO_PAYMENT="Verder naar betaling"
 COM_BIXPRINTSHOP_BESTELLING_BESTELID="Bestelnummer"
 COM_BIXPRINTSHOP_BESTELLING_BESTELLINGDATUM="Besteldatum"
 COM_BIXPRINTSHOP_BESTELLING_BESTELSTATUS="Status bestelling"
+COM_BIXPRINTSHOP_BESTELLING_BETAALSTATUS="Status betaling"
 COM_BIXPRINTSHOP_BESTELLING_BESTELCOMMENT="Opmerking bij bestelling"
 COM_BIXPRINTSHOP_BESTELLING_BESTELCOMMENT_SHORT="Opmerking"
 COM_BIXPRINTSHOP_BESTELDETAILS="Details bestelling"
