--- a/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -1086,6 +1086,7 @@ COM_BIXPRINTSHOP_DUBBELE_COUPONCODE_SPR="Couponcode ID %s heeft dezelfde code!"
 COM_BIXPRINTSHOP_LEGEND_COUPONCAMPAGNE_DETAILS="Details campagne"
 COM_BIXPRINTSHOP_LEGEND_COUPON_DETAILS="Details coupon"
 COM_BIXPRINTSHOP_LEGEND_COUPON_WAARDE="Coupon waarde"
+COM_BIXPRINTSHOP_LEGEND_COUPON_CONDITIES="Coupon voorwaarden"
 COM_BIXPRINTSHOP_TITLE_USEDCOUPONS="Verzilveringen"
 COM_BIXPRINTSHOP_TITLE_CAMAGNECOUPONS="Gekoppelde coupons"
 COM_BIXPRINTSHOP_COUPONUSED_COUPONWAARDE="Uitgekeerde korting"
