--- a/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -567,8 +567,10 @@ COM_BIXPRINTSHOP_PARAMS_ALERT_ERROR="Error"
 COM_BIXPRINTSHOP_PARAMS_DEPENDENCIES_DESC="Opties die in hun keuze beperkt worden door de waarde van deze optie"
 COM_BIXPRINTSHOP_PARAMS_NRCOLS="Aantal kolommen"
 COM_BIXPRINTSHOP_PARAMS_NRCOLS_DESC="Aantal kolommen die de optie breed is. Dit kan de mogelijkheden beperken!"
-COM_BIXPRINTSHOP_PARAMS_OPTIONCLASS="Class achtervoegsel"
-COM_BIXPRINTSHOP_PARAMS_OPTIONCLASS_DESC="Extra CSS-class voor de optie"
+COM_BIXPRINTSHOP_PARAMS_OPTIONCLASS="Class selector"
+COM_BIXPRINTSHOP_PARAMS_OPTIONCLASS_DESC="Extra CSS-class voor de optieselector"
+COM_BIXPRINTSHOP_PARAMS_HOLDERCLASS="Class optiehouder"
+COM_BIXPRINTSHOP_PARAMS_HOLDERCLASS_DESC="Extra CSS-class voor de optiehouder"
 COM_BIXPRINTSHOP_PARAMS_SHOW_DESCRIPTION="Toon beschrijving"
 COM_BIXPRINTSHOP_PARAMS_SHOW_DESCRIPTION_DESC="Hoe moet de optie beschrijving getoond worden?"
 SHOW_DESCRIPTION_IN_TOOLTIP="In tooltip"
