--- a/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -112,6 +112,7 @@ COM_BIXPRINTSHOP_TITLE_CATEGORIES="Categorieën"
 COM_BIXPRINTSHOP_TITLE_CATEGORY="Categorie"
 COM_BIXPRINTSHOP_ADMINISTRATION_CATEGORIES="Bixie Printshop :: Categorieën"
 COM_BIXPRINTSHOP_TITLE_PRICES="Prijzen"
+COM_BIXPRINTSHOP_TITLE_COUPON="Coupon"
 COM_BIXPRINTSHOP_TITLE_COUPONS="Coupons"
 COM_BIXPRINTSHOP_TITLE_PRIJZEN="Prijzen"
 COM_BIXPRINTSHOP_TITLE_PRIJS="Prijs"
