--- a/administrator/language/nl-NL/nl-NL.plg_bixprintshop_wrgave_imagestack.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_bixprintshop_wrgave_imagestack.ini
@@ -18,4 +18,4 @@ COM_BIXPRINTSHOP_PLG_WRGVE_IMAGESTACK_DEFIMAGEFOLDER="Standaard afbeeldingenmap"
 COM_BIXPRINTSHOP_PLG_WRGVE_IMAGESTACK_DEFIMAGEFOLDER_DESC="Geef het standaardpad naar de afbeeldingenmap op."
 
 ;frontend
-COM_BIXPRINTSHOP_PLG_WRGVE_IMAGESTACK_KLIK_VERGROTING="Klik op de tekening voor een vergroting."
+COM_BIXPRINTSHOP_PLG_WRGVE_IMAGESTACK_KLIK_VERGROTING="<strong>Werktekening</strong> (Klik voor een vergroting)"
