--- a/administrator/language/nl-NL/nl-NL.plg_bixprintshop_jscript_verzamel.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_bixprintshop_jscript_verzamel.ini
@@ -10,6 +10,7 @@ COM_BIXPRINTSHOP_PLG_VERZAMEL_CACHE="Gebruik DB-caching"
 COM_BIXPRINTSHOP_PLG_VERZAMEL_DEBUG="Toon debug"
 COM_BIXPRINTSHOP_PLG_VERZAMEL_DEBUG_DESC="Toon debuginformatie in de browser"
 COM_BIXPRINTSHOP_PLG_VERZAMEL_STANDAARDUITVOER="Standaardwaarde uitoertermijn"
+COM_BIXPRINTSHOP_PLG_VERZAMEL_SCROLLTOPRICES="Scroll naar prijs na selectie"
 COM_BIXPRINTSHOP_PLG_VERZAMEL_VOLLEDIGEOPLAGE="Volledige oplage ophalen"
 COM_BIXPRINTSHOP_PLG_VERZAMEL_VOLLEDIGEOPLAGE_DESC="Als alleen de oplage nog gekozen moet worden, alle mogelijke oplages en uitovertermijnen ophalen."
 
