--- a/administrator/language/nl-NL/nl-NL.plg_bixprintshop_order_bestandscontrole.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_bixprintshop_order_bestandscontrole.ini
@@ -4,6 +4,10 @@
 COM_BIXPRINTSHOP_PLG_BESTANDSCONTROLE_DESCR="Plugin voor attribtype brocheren"
 COM_BIXPRINTSHOP_PLUGIN_TITLE_BESTANDSCONTROLE="Bestandscontrole"
 ;config
+COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_ENDPOINT="Endpoint controle"
+COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_ENDPOINT_DESC="Map die wordt uitgelezen door de Pitstop server"
+COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_RETURN="Return controle"
+COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_RETURN_DESC="Map waar gecontroleerd bestand wordt teruggezet door de Pitstop server"
 COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_WETRANSFERMAIL="WeTransfer mailadres"
 COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_WETRANSFER="URL WeTransfer"
 
@@ -74,9 +78,20 @@ COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_NIET_GEVONDEN="Controledata niet gevond
 COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_MEERDETAILS="Klik voor meer details"
 COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_ADDFILE="Bestand toevoegen"
 
+COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_PDFRESULT="Bekijk resultaat in pdf"
 
-
-
-
+;XML
+COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_ERRORS_RESULT="Fouten"
+COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_ERRORS_RESULT_DESC="Fouten beschrijving"
+COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_WARNINGS_RESULT="Waarschuwingen"
+COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_WARNINGS_RESULT_DESC="Waarschuwingen beschrijving"
+COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_FIXES_RESULT="Herstellingen"
+COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_FIXES_RESULT_DESC="Herstellingen beschrijving"
+COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_NONCRITICALFAILURES_RESULT="Kritieke fouten"
+COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_NONCRITICALFAILURES_RESULT_DESC="Kritieke fouten beschrijving"
+COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_CRITICALFAILURES_RESULT="Niet-kritieke fouten"
+COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_CRITICALFAILURES_RESULT_DESC="Niet-kritieke fouten beschrijving"
+COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_SIGNOFFS_RESULT="Afhandelingen"
+COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_SIGNOFFS_RESULT_DESC="Afhandelingen beschrijving"
 
 
