--- a/administrator/language/nl-NL/nl-NL.plg_bixprintshop_order_bestandscontrole.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_bixprintshop_order_bestandscontrole.ini
@@ -30,9 +30,11 @@ CONTROLE_ONTVANGEN="Controle ontvangen"
 CONTROLE_ONMOGELIJK="Niet mogelijk"
 COM_BIXPRINTSHOP_BESTANDSCONTROLE_FILENAME="Bestandsnaam"
 COM_BIXPRINTSHOP_BESTANDSCONTROLE_FILEID="Bestands ID"
-COM_BIXPRINTSHOP_BESTANDSCONTROLE_UPLOADDATUM="Uploaddatum"
+COM_BIXPRINTSHOP_BESTANDSCONTROLE_UPLOADDATUM="Rapport verzonden"
 COM_BIXPRINTSHOP_BESTANDSCONTROLE_FILEPATH="Bestand-pad"
 COM_BIXPRINTSHOP_BESTANDSCONTROLE_ZIPPATH="Zip-pad"
+COM_BIXPRINTSHOP_BESTANDSCONTROLE_RETURNDATUM="Rapport ontvangen"
+
 ;uploadfront
 COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_BEVESTIG_BESTANDEN="Bestanden bevestigen"
 
