--- a/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -702,6 +702,7 @@ COM_BIXPRINTSHOP_BUTTON_EDIT_DEPEND="Bewerken"
 COM_BIXPRINTSHOP_BUTTON_SAVE_DEPEND="Opslaan"
 BIX_MAAK_ADRES_AAN="Maak adres aan"
 COM_BIXPRINTSHOP_PARAMS_NO_DRUKVELLEN="Geen drukvellen"
+COM_BIXPRINTSHOP_PARAMS_NO_PAPIER="Geen papiersoorten"
 COM_BIXPRINTSHOP_PARAMS_NO_COMPANY_ID="Geen drukkerij ID"
 COM_BIXPRINTSHOP_NO_USERID="Geen gebruikers ID"
 COM_BIXPRINTSHOP_NO_OPTIONID="Geen optie ID"
