--- a/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -114,6 +114,7 @@ COM_BIXPRINTSHOP_TO_CHECKOUT="Verder naar betaling"
 COM_BIXPRINTSHOP_BUTTON_PRODUCTENOVERZICHT="Productoverzicht"
 COM_BIXPRINTSHOP_EMPTY_CART="Winkelwagen legen"
 COM_BIXPRINTSHOP_OPSLAANOFFERTE="Opslaan als offerte"
+COM_BIXPRINTSHOP_ADVIESPRIJS="Adviesprijs"
 
 ; checkout
 COM_BIXPRINTSHOP_LOGIN_RESET="Wachtwoord vergeten?"
@@ -173,6 +174,7 @@ COM_BIXPRINTSHOP_CHECKOUT_BETAALMETHODE_SELECTEREN="Selecteer de gewenste betaal
 COM_BIXPRINTSHOP_CART_KORTING="Kortingscode"
 COM_BIXPRINTSHOP_CART_KORTING_DESC="Voer de kortingscode in die je van Peter hebt gekregen."
 COM_BIXPRINTSHOP_CART_KORTING_INFO_TITLE="Peter geeft korting"
+COM_BIXPRINTSHOP_INBTW="incl. btw"
 
 ; Upload
 COM_BIXPRINTSHOP_DROPBOX="Of sleep direct je bestanden in het kader"
@@ -215,7 +217,8 @@ COM_BIXPRINTSHOP_BESTELLING_AL_BEVESTIGD="Bestelling is al bevestigd, en kan nie
 COM_BIXPRINTSHOP_OFFERTE_INGELADEN="De offerte is ingeladen en kan betaald worden"
 COM_BIXPRINTSHOP_BESTELLING_INGELADEN="De bestelling is ingeladen en kan betaald worden"
 COM_BIXPRINTSHOP_OFFERTE_NOG_GEEN_OFFERTES="Nog geen offertes opgeslagen"
-COM_BIXPRINTSHOP_BETAAL_BESTELLING="Betaling afronden"
+COM_BIXPRINTSHOP_BETAAL_BESTELLING="Betalen"
+
 ; Volgense / Vorige knoppen
 COM_BIXPRINTSHOP_BUTTON_VORIGE="Vorige pagina"
 COM_BIXPRINTSHOP_BUTTON_VOLGENDE="Volgende pagina"
