--- a/administrator/language/nl-NL/nl-NL.plg_bixprintshop_jscript_verzamel.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_bixprintshop_jscript_verzamel.ini
@@ -13,7 +13,7 @@ COM_BIXPRINTSHOP_PLG_VERZAMEL_STANDAARDUITVOER="Standaardwaarde uitoertermijn"
 COM_BIXPRINTSHOP_PLG_VERZAMEL_SCROLLTOPRICES="Scroll naar prijs na selectie"
 COM_BIXPRINTSHOP_PLG_VERZAMEL_VOLLEDIGEOPLAGE="Volledige oplage ophalen"
 COM_BIXPRINTSHOP_PLG_VERZAMEL_VOLLEDIGEOPLAGE_DESC="Als alleen de oplage nog gekozen moet worden, alle mogelijke oplages en uitovertermijnen ophalen."
-
+COM_BIXPRINTSHOP_PLG_VERZAMEL_MACHINTYPES="Toon prijzen voor"
 COM_BIXPRINTSHOP_PLG_VERZAMEL_GEENPRIJS="Geen prijs gevonden"
 
 COM_BIXPRINTSHOP_PLG_VERZAMEL_DISABLEDSTYLE="Weergave onmogelijke opties"
