--- a/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -53,7 +53,7 @@ COM_BIXPRINTSHOP_FACTUUR_TOTAAL_NETTO="Totaal netto"
 COM_BIXPRINTSHOP_FACTUUR_TOTAAL_BTW="Totaal BTW"
 COM_BIXPRINTSHOP_FACTUUR_TOTAAL_BRUTO="Totaal bruto"
 COM_BIXPRINTSHOP_FACTUUR_VOLDAAN_SPRF="Factuur voldaan via %s, betaling-ID: %s"
-
+COM_BIXPRINTSHOP_FACTUURREDEN_NIEUWE_BESTELLING="Aanmaken factuur na bevestiging bestelling"
 
 ; users, adressen
 COM_BIXPRINTSHOP_USER_TITLE_GEGEVENS="Gegevens"
@@ -201,6 +201,7 @@ COM_BIXPRINTSHOP_BESTELLING_BETAALDATUM="Betaaldatum"
 COM_BIXPRINTSHOP_BESTELLING_STATUS="Bestellingstatus"
 COM_BIXPRINTSHOP_BESTELLING_FACTUURGEGEVENS="Factuurgegevens"
 
+COM_BIXPRINTSHOP_TITLE_BESTELDETAILS="Bestellingdetails"
 COM_BIXPRINTSHOP_TITLE_OFFERTEDETAILS="Offertedetails"
 COM_BIXPRINTSHOP_OFFERTE_ID="Offertenummer"
 COM_BIXPRINTSHOP_OFFERTE_BESTELID="Offertenummer"
