--- a/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -64,6 +64,13 @@ BIX_DATE="d-m-Y H:i:s"
 BIX_MM="mm"
 COM_BIXPRINTSHOP_MAIL_SENT_SPR="Email naar %s succesvol verzonden"
 BIX_AANTAL_PAGS="Aantal pagina's"
+BIX_GAST="Gastgebruiker"
+;aanhef
+BIX_AANHEF_FORMEEL_M="Geachte heer %s"
+BIX_AANHEF_FORMEEL_V="Geachte mevrouw %s"
+BIX_AANHEF_INFORMEEL="Beste %s"
+BIX_BRIEFHOOFD_FORMEEL_M="Dhr. %s. %s"
+BIX_BRIEFHOOFD_FORMEEL_V="Mvr. %s. %s"
 ;params (ook in .sys ini)
 COM_BIXPRINTSHOP_PARAMS_TITLE_PRODUCTEN="Categorieoverzicht"
 COM_BIXPRINTSHOP_PARAMS_TITLE_PRODUCT="Productdetails"
@@ -112,6 +119,7 @@ COM_BIXPRINTSHOP_TITLE_CATEGORIES="Categorieën"
 COM_BIXPRINTSHOP_TITLE_CATEGORY="Categorie"
 COM_BIXPRINTSHOP_ADMINISTRATION_CATEGORIES="Bixie Printshop :: Categorieën"
 COM_BIXPRINTSHOP_TITLE_PRICES="Prijzen"
+COM_BIXPRINTSHOP_TITLE_COUPON="Coupon"
 COM_BIXPRINTSHOP_TITLE_COUPONS="Coupons"
 COM_BIXPRINTSHOP_TITLE_PRIJZEN="Prijzen"
 COM_BIXPRINTSHOP_TITLE_PRIJS="Prijs"
@@ -515,6 +523,7 @@ COM_BIXPRINTSHOP_AFWERKPRIJS_AFWERKTYPE="Afwerktype"
 COM_BIXPRINTSHOP_LEGEND_VERVOERPRIJZEN="Vervoerprijzen"
 COM_BIXPRINTSHOP_LEGEND_VERVOERPRIJS="Vervoerprijs"
 COM_BIXPRINTSHOP_VERVOERPRIJS_VERVOERDER="Vervoerder"
+BIX_AFWERKPRIJS_TOEVOEGEN="Vervoerprijs toevoegen"
 COM_BIXPRINTSHOP_VERVOERPRIJS_ID="Vervoerprijs ID"
 COM_BIXPRINTSHOP_VERVOERPRIJS_OPSTARTINKOOP="Opstart inkoop"
 COM_BIXPRINTSHOP_VERVOERPRIJS_OPSTARTPRIJS="Opstartprijs"
@@ -829,6 +838,7 @@ COM_BIXPRINTSHOP_LEGEND_BETALINGHISTORIE="Betalingshistorie"
 COM_BIXPRINTSHOP_LEGEND_BETALING="Betalingdetails"
 COM_BIXPRINTSHOP_LEGEND_BESTELLING_STATUS="Bestelstatus"
 COM_BIXPRINTSHOP_LEGEND_ADRESSEN="Adressen"
+COM_BIXPRINTSHOP_LEGEND_ORDEROPTIONS="Orderopties"
 COM_BIXPRINTSHOP_LEGEND_BESTELLING_FACTUREN="Facturen"
 COM_BIXPRINTSHOP_DOWNLOAD_FACTUUR="Factuur downloaden"
 COM_BIXPRINTSHOP_BESTELLING_VERZENDADRES="Verzendadres"
@@ -918,6 +928,10 @@ COM_BIXPRINTSHOP_FACTUUR_GROEP5="Factuurgroep 5"
 COM_BIXPRINTSHOP_FACTUUR_BESTELNETTO="Bestelling netto"
 COM_BIXPRINTSHOP_FACTUUR_BESTELBTW="Bestelling btw"
 COM_BIXPRINTSHOP_FACTUUR_BESTELBRUTO="Bestelling bruto"
+
+COM_BIXPRINTSHOP_FACTUURREDEN_RESERVERING="Aanmaken factuurnummer"
+COM_BIXPRINTSHOP_FACTUURREDEN_NIEUWE_BESTELLING="Aanmaken factuur na bevestiging bestelling"
+
 COM_BIXPRINTSHOP_ORDER_TOTAALNETTO="Order totaal netto"
 COM_BIXPRINTSHOP_ORDER_TOTAALBTW="Order totaal btw"
 COM_BIXPRINTSHOP_ORDER_TOTAALBRUTO="Order totaal bruto"
@@ -975,11 +989,15 @@ COM_BIXPRINTSHOP_ORDER_LOCKCALC_DESC="Voorkom dat de order opnieuw gecalculeerd 
 COM_BIXPRINTSHOP_LEGEND_ORDER_DETAILS="Orderdetails"
 COM_BIXPRINTSHOP_LEGEND_ORDER_STATUS="Order status"
 COM_BIXPRINTSHOP_LEGEND_ORDER_BESTANDEN="Order bestanden"
+COM_BIXPRINTSHOP_LEGEND_ORDER_GEBRUIKER="Gebruikersinfo"
+COM_BIXPRINTSHOP_LEGEND_ORDER_FACTUURADRES="Factuuradres"
 COM_BIXPRINTSHOP_LEGEND_ORDER_VERZENDADRES="Verzendadres"
 COM_BIXPRINTSHOP_LEGEND_ORDER_COMMUNICATIE="Communicatie"
 COM_BIXPRINTSHOP_LEGEND_COMMUNICATIE_KLANT="Klant"
 COM_BIXPRINTSHOP_LEGEND_COMMUNICATIE_DRUKKERIJ="Drukkerij"
-
+COM_BIXPRINTSHOP_ORDER_NAARBESTELLING="Naar bestelling"
+COM_BIXPRINTSHOP_ORDER_NAARUSER="Naar gebruiker"
+COM_BIXPRINTSHOP_ORDER_MARGE_TOTAAL="Totale marge"
 COM_BIXPRINTSHOP_ORDER_MARGE_PLANO="Marge planoprijs"
 COM_BIXPRINTSHOP_ORDER_MARGE_AFWERKING="Marge afwerking"
 COM_BIXPRINTSHOP_ORDER_MARGE_BESTELLING="Marge orderprijs"
@@ -1086,6 +1104,7 @@ COM_BIXPRINTSHOP_DUBBELE_COUPONCODE_SPR="Couponcode ID %s heeft dezelfde code!"
 COM_BIXPRINTSHOP_LEGEND_COUPONCAMPAGNE_DETAILS="Details campagne"
 COM_BIXPRINTSHOP_LEGEND_COUPON_DETAILS="Details coupon"
 COM_BIXPRINTSHOP_LEGEND_COUPON_WAARDE="Coupon waarde"
+COM_BIXPRINTSHOP_LEGEND_COUPON_CONDITIES="Coupon voorwaarden"
 COM_BIXPRINTSHOP_TITLE_USEDCOUPONS="Verzilveringen"
 COM_BIXPRINTSHOP_TITLE_CAMAGNECOUPONS="Gekoppelde coupons"
 COM_BIXPRINTSHOP_COUPONUSED_COUPONWAARDE="Uitgekeerde korting"
